pkp/pkp-lib#7286 Refactor remaining emails

--- a/locale/ca_ES/emails.po
+++ b/locale/ca_ES/emails.po
@@ -28,7 +28,7 @@ msgstr ""
 "<br />\n"
 "Aquest correu s'ha generat automàticament, no respongueu a aquest missatge.<"
 "br />\n"
-"{$signature}<hr />{$unsubscribeLink}"
+"{$contextSignature}<hr />{$unsubscribeLink}"
 
 msgid "emails.passwordResetConfirm.subject"
 msgstr "Confirmació del restabliment de contrasenya"
@@ -41,10 +41,7 @@ msgstr ""
 "<br />\n"
 "Restableix la meva contrasenya: {$passwordResetUrl}<br />\n"
 "<br />\n"
-"{$signature}"
-
-msgid "emails.passwordResetConfirm.description"
-msgstr "Aquest correu s'envia a un usuari/ària registrat quan indica que ha oblidat la seva contrasenya o no pot iniciar sessió. Proporciona una URL que l'usuari/ària pot seguir per restablir la seva contrasenya."
+"{$siteContactName}"
 
 msgid "emails.passwordReset.subject"
 msgstr "Contrasenya restablerta"
@@ -56,10 +53,7 @@ msgstr ""
 "Nom d'usuari/ària: {$recipientUsername}<br />\n"
 "Contrasenya nova: {$password}<br />\n"
 "<br />\n"
-"{$signature}"
-
-msgid "emails.passwordReset.description"
-msgstr "Aquest correu s'envia a usuaris/àries registrats quan han canviat amb èxit la seva contrasenya seguint els passos descrits al correu electrònic PASSWORD_RESET_CONFIRM."
+"{$siteContactName}"
 
 msgid "emails.userRegister.subject"
 msgstr "Registre de publicació"
@@ -79,9 +73,6 @@ msgstr ""
 "<br />\n"
 "Gràcies,<br />\n"
 "{$signature}"
-
-msgid "emails.userRegister.description"
-msgstr "Aquest correu s'envia a un usuari/ària nou per donar-li la benvinguda al sistema i proporcionar-li un registre del seu nom d'usuari/ària i contrasenya."
 
 msgid "emails.userValidate.subject"
 msgstr "Valideu el vostre compte"
@@ -115,9 +106,6 @@ msgstr ""
 "Gràcies,<br />\n"
 "{$signature}"
 
-msgid "emails.reviewerRegister.description"
-msgstr "Aquest correu s'envia a un revisor/a nou per donar-li la benvinguda al sistema i proporcionar-li un registre del seu nom d'usuari/ària i contrasenya."
-
 msgid "emails.submissionAckNotUser.subject"
 msgstr "Justificant de recepció de la tramesa"
 
@@ -129,10 +117,7 @@ msgstr ""
 "<br />\n"
 "Si teniu cap pregunta, contacteu amb mi. Gràcies per tenir en compte aquesta publicació per desenvolupar la vostra feina.<br />\n"
 "<br />\n"
-"{$signature}"
-
-msgid "emails.submissionAckNotUser.description"
-msgstr "Aquest correu electrònic, quan està habilitat, s'envia automàticament als altres autors/ores que no són usuaris/àries a l'OMP especificats durant el procés de tramesa."
+"{$contextSignature}"
 
 msgid "emails.editorAssign.subject"
 msgstr "Assignació d'editorials"
@@ -147,9 +132,6 @@ msgstr ""
 "Nom d'usuari/ària: {$recipientUsername}<br />\n"
 "<br />\n"
 "Gràcies,"
-
-msgid "emails.editorAssign.description"
-msgstr "Aquest correu notifica a un editor/a de sèrie que l'editor/a els ha assignat la tasca de supervisar una tramesa en el procés d'edició. Proporciona informació sobre la tramesa i sobre com accedir al lloc web de la publicació."
 
 msgid "emails.reviewRequest.subject"
 msgstr "Sol·licitud de revisió d'un manuscrit"
@@ -315,9 +297,6 @@ msgstr ""
 "Si no podeu realitzar aquesta tasca en aquests moments o teniu cap pregunta, poseu-vos en contacte amb mi. Gràcies per la vostra contribució a la publicació."
 
 #, fuzzy
-msgid "emails.layoutRequest.description"
-msgstr "Aquest correu electrònic de l'editor/a de sèrie al maquetista li notifica que se li ha assignat las tasca del procés de maquetació d'una tramesa. Proporciona informació de la tramesa i de com accedir-hi."
-
 msgid "emails.layoutComplete.subject"
 msgstr "Galerades de maquetació completades"
 
@@ -332,9 +311,6 @@ msgstr ""
 "Si teniu cap pregunta contacteu amb mi.<br />\n"
 "<br />\n"
 "{$senderName}"
-
-msgid "emails.layoutComplete.description"
-msgstr "Aquest correu electrònic del maquetista a l'editor/a de sèrie li notifica que el procés de maquetació s'ha completat."
 
 msgid "emails.indexRequest.subject"
 msgstr "Sol·licita índex"
@@ -421,17 +397,8 @@ msgstr "Introduïu-hi el missatge."
 msgid "emails.notificationCenterDefault.description"
 msgstr "El missatge (en blanc) per defecte utilitzat al generador de llistes de missatges del centre de notificacions."
 
-msgid "emails.announcement.description"
-msgstr "Aquest correu electrònic s'envia quan es crea un avís nou."
-
 msgid "emails.announcement.subject"
 msgstr "{$announcementTitle}"
-
-msgid "emails.statisticsReportNotification.description"
-msgstr ""
-"Aquest correu electrònic s'envia automàticament cada mes a editors/ores i "
-"administradors/ores de revistes per donar-los una visió general de la salut "
-"del sistema."
 
 msgid "emails.statisticsReportNotification.subject"
 msgstr "Activitat editorial per {$month}, {$year}"
@@ -464,7 +431,7 @@ msgstr ""
 msgid "emails.statisticsReportNotification.body"
 msgstr ""
 "\n"
-"{$name}, <br />\n"
+"{$recipientName}, <br />\n"
 "<br />\n"
 "Ja està disponible l'informe de salut de la vostra publicació per al {$month}"
 ", {$year}. Les estadístiques clau d'aquest mes son les següents.<br />\n"
@@ -480,7 +447,7 @@ msgstr ""
 "completa de les tendències editorials d'aquest mes.<br />\n"
 "<br />\n"
 "Cordialment,<br />\n"
-"{$signature}"
+"{$contextSignature}"
 
 msgid "emails.reviewResponseOverdueAuto.body"
 msgstr ""
