--- a/locale/cs_CZ/emails.po
+++ b/locale/cs_CZ/emails.po
@@ -14,12 +14,6 @@ msgstr ""
 msgid "emails.notification.subject"
 msgstr "Nové oznámení od {$contextName}"
 
-msgid "emails.passwordReset.description"
-msgstr ""
-"Tato e-mailová zpráva se zasílá registrovanému uživateli, který potvrdil "
-"svůj zájem o obnovení hesla - tak, jak bylo popsáno v e-mailové zprávě "
-"Potvrzení o obnovení hesla."
-
 msgid "emails.passwordReset.body"
 msgstr ""
 "Vaše heslo pro vstup na stránku {$siteTitle} bylo úspěšně obnoveno. Toto "
@@ -29,16 +23,10 @@ msgstr ""
 "Vaše uživatelské jméno: {$recipientUsername}<br />\n"
 "Vaše nové heslo: {$password}<br />\n"
 "<br />\n"
-" {$signature}"
+" {$siteContactName}"
 
 msgid "emails.passwordReset.subject"
 msgstr "Heslo obnoveno"
-
-msgid "emails.passwordResetConfirm.description"
-msgstr ""
-"Tato e-mailová zpráva se zasílá registrovanému uživateli, který uvedl, že "
-"zapomněl své heslo, případně že se mu nedaří se přihlásit. Obsahuje odkaz na "
-"stránku, kde si heslo může obnovit."
 
 msgid "emails.passwordResetConfirm.body"
 msgstr ""
@@ -51,7 +39,7 @@ msgstr ""
 "<br />\n"
 "Obnovit mé heslo: {$passwordResetUrl}<br />\n"
 "<br />\n"
-" {$signature}"
+" {$siteContactName}"
 
 msgid "emails.passwordResetConfirm.subject"
 msgstr "Potvrzení obnovy hesla"
@@ -66,7 +54,7 @@ msgstr ""
 "Odkaz: {$notificationUrl}<br />\n"
 "<br />\n"
 "Toto je automaticky generovaný e-mail. Prosím neodpovídejte na něj.<br />\n"
-"{$signature}"
+"{$contextSignature}"
 
 msgid "emails.reviewRemindAuto.body"
 msgstr ""
@@ -227,12 +215,6 @@ msgstr ""
 msgid "emails.reviewRequest.subject"
 msgstr "Žádost o recenzi rukopisu"
 
-msgid "emails.editorAssign.description"
-msgstr ""
-"Tento e-mail oznamuje redaktorovi série, že mu editor přidělil úkol dohlížet "
-"na předložený příspěvek v průběhu redakčního procesu. Poskytuje informace o "
-"podání a o tom, jak získat přístup na tiskové stránky."
-
 msgid "emails.editorAssign.body"
 msgstr ""
 "{$recipientName}: <br />\n"
@@ -249,11 +231,6 @@ msgstr ""
 msgid "emails.editorAssign.subject"
 msgstr "Redakční přiřazení"
 
-msgid "emails.submissionAckNotUser.description"
-msgstr ""
-"Pokud je tento e-mail povolen, automaticky se zasílá ostatním autorům, kteří "
-"nejsou uživateli v rámci OMP zadaných během procesu podávání."
-
 msgid "emails.submissionAckNotUser.body"
 msgstr ""
 "Dobrý den, <br />\n"
@@ -264,15 +241,10 @@ msgstr ""
 "Máte-li jakékoli dotazy, kontaktujte mě. Děkujeme, že jste tento tisk "
 "považovali za příležitost pro svou práci. <br />\n"
 "<br />\n"
-"{$signature}"
+"{$contextSignature}"
 
 msgid "emails.submissionAckNotUser.subject"
 msgstr "Potvrzení Podání"
-
-msgid "emails.reviewerRegister.description"
-msgstr ""
-"Tento e-mail se zasílá nově registrovanému recenzentovi, aby je přivítal v "
-"systému a poskytl jim záznam o jejich uživatelském jménu a hesle."
 
 msgid "emails.reviewerRegister.body"
 msgstr ""
@@ -318,11 +290,6 @@ msgstr ""
 
 msgid "emails.userValidate.subject"
 msgstr "Ověřte svůj účet"
-
-msgid "emails.userRegister.description"
-msgstr ""
-"Tento e-mail se zasílá nově registrovanému uživateli, aby jej uvítal v "
-"systému a poskytl mu záznam jeho uživatelského jména a hesla."
 
 msgid "emails.userRegister.body"
 msgstr ""
