--- a/locale/en_US/emails.po
+++ b/locale/en_US/emails.po
@@ -23,7 +23,7 @@ msgstr ""
 "Link: {$notificationUrl}<br />\n"
 "<br />\n"
 "This is an automatically generated email; please do not reply to this message.<br />\n"
-"{$signature}"
+"{$contextSignature}"
 "<hr />"
 "{$unsubscribeLink}"
 
@@ -38,10 +38,7 @@ msgstr ""
 "<br />\n"
 "Reset my password: {$passwordResetUrl}<br />\n"
 "<br />\n"
-"{$signature}"
-
-msgid "emails.passwordResetConfirm.description"
-msgstr "This email is sent to a registered user when they indicate that they have forgotten their password or are unable to login. It provides a URL they can follow to reset their password."
+"{$siteContactName}"
 
 msgid "emails.passwordReset.subject"
 msgstr "Password Reset"
@@ -53,10 +50,7 @@ msgstr ""
 "Your username: {$recipientUsername}<br />\n"
 "Your new password: {$password}<br />\n"
 "<br />\n"
-"{$signature}"
-
-msgid "emails.passwordReset.description"
-msgstr "This email is sent to a registered user when they have successfully reset their password following the process described in the PASSWORD_RESET_CONFIRM email."
+"{$siteContactName}"
 
 msgid "emails.userRegister.subject"
 msgstr "Press Registration"
@@ -72,9 +66,6 @@ msgstr ""
 "<br />\n"
 "Thank you,<br />\n"
 "{$signature}"
-
-msgid "emails.userRegister.description"
-msgstr "This email is sent to a newly registered user to welcome them to the system and provide them with a record of their username and password."
 
 msgid "emails.userValidateContext.subject"
 msgstr "Validate Your Account"
@@ -119,9 +110,6 @@ msgstr ""
 "Thank you,<br />\n"
 "{$signature}"
 
-msgid "emails.reviewerRegister.description"
-msgstr "This email is sent to a newly registered reviewer to welcome them to the system and provide them with a record of their username and password."
-
 msgid "emails.submissionAckNotUser.subject"
 msgstr "Submission Acknowledgement"
 
@@ -133,10 +121,7 @@ msgstr ""
 "<br />\n"
 "If you have any questions, please contact me. Thank you for considering this press as a venue for your work.<br />\n"
 "<br />\n"
-"{$signature}"
-
-msgid "emails.submissionAckNotUser.description"
-msgstr "This email, when enabled, is automatically sent to the other authors who are not users within OMP specified during the submission process."
+"{$contextSignature}"
 
 msgid "emails.editorAssign.subject"
 msgstr "Editorial Assignment"
@@ -151,9 +136,6 @@ msgstr ""
 "Username: {$recipientUsername}<br />\n"
 "<br />\n"
 "Thank you,"
-
-msgid "emails.editorAssign.description"
-msgstr "This email notifies a Series Editor that the Editor has assigned them the task of overseeing a submission through the editing process. It provides information about the submission and how to access the press site."
 
 msgid "emails.reviewRequest.subject"
 msgstr "Manuscript Review Request"
@@ -354,11 +336,6 @@ msgstr ""
 "<p>Kind regards,</p>"
 "{$signature}"
 
-msgid "emails.layoutRequest.description"
-msgstr ""
-"This email from an Editor to the Layout Editor notifies them that they have been assigned the task of performing "
-"layout editing on a submission. It provides information about the submission and how to access it."
-
 msgid "emails.layoutComplete.subject"
 msgstr "Galleys Complete"
 
@@ -371,9 +348,6 @@ msgstr ""
 "<p>If you have any questions, please contact me.</p>"
 "<p>Kind regards,</p>"
 "<p>{$senderName}</p>"
-
-msgid "emails.layoutComplete.description"
-msgstr "This email from the Layout Editor to the Series Editor notifies them that the layout process has been completed."
 
 msgid "emails.indexRequest.subject"
 msgstr "Request Index"
@@ -466,7 +440,7 @@ msgstr "Editorial activity for {$month}, {$year}"
 msgid "emails.statisticsReportNotification.body"
 msgstr ""
 "\n"
-"{$name}, <br />\n"
+"{$recipientName}, <br />\n"
 "<br />\n"
 "Your press health report for {$month}, {$year} is now available. Your key stats for this month are below.<br />\n"
 "<ul>\n"
@@ -478,10 +452,7 @@ msgstr ""
 "Login to the the press to view more detailed <a href=\"{$editorialStatsLink}\">editorial trends</a> and <a href=\"{$publicationStatsLink}\">published book stats</a>. A full copy of this month's editorial trends is attached.<br />\n"
 "<br />\n"
 "Sincerely,<br />\n"
-"{$signature}"
-
-msgid "emails.statisticsReportNotification.description"
-msgstr "This email is automatically sent monthly to editors and press managers to provide them a system health overview."
+"{$contextSignature}"
 
 msgid "emails.announcement.subject"
 msgstr "{$announcementTitle}"
@@ -493,6 +464,3 @@ msgstr ""
 "{$announcementSummary}<br />\n"
 "<br />\n"
 "Visit our website to read the <a href=\"{$announcementUrl}\">full announcement</a>."
-
-msgid "emails.announcement.description"
-msgstr "This email is sent when a new announcement is created."
