--- a/locale/fi_FI/emails.po
+++ b/locale/fi_FI/emails.po
@@ -28,7 +28,7 @@ msgstr ""
 "<br />\n"
 "Tämä on automaattisesti luotu sähköposti; Älkää vastatko tähän viestiin.<br "
 "/>\n"
-"{$signature}"
+"{$contextSignature}"
 
 msgid "emails.passwordResetConfirm.subject"
 msgstr "Vahvista salasanan vaihtaminen"
@@ -41,7 +41,7 @@ msgstr ""
 "<br />\n"
 "Vaihda salasana: {$passwordResetUrl}<br />\n"
 "<br />\n"
-"{$signature}"
+"{$siteContactName}"
 
 msgid "emails.passwordReset.subject"
 msgstr "Salasana vaihdettu"
@@ -53,7 +53,7 @@ msgstr ""
 "Käyttäjätunnus: {$recipientUsername}<br />\n"
 "Uusi salasana: {$password}<br />\n"
 "<br />\n"
-"{$signature}"
+"{$siteContactName}"
 
 msgid "emails.userRegister.subject"
 msgstr "Julkaisijan sivustolle rekisteröityminen"
@@ -127,7 +127,7 @@ msgstr ""
 "Jos teillä on kysyttävää, otattehan yhteyttä minuun. Kiitos, että valitsitte "
 "tämän julkaisijan työllenne.<br />\n"
 "<br />\n"
-"{$signature}"
+"{$contextSignature}"
 
 msgid "emails.editorAssign.subject"
 msgstr "Toimituksellinen toimeksianto"
@@ -423,15 +423,6 @@ msgstr "Viesti julkaisijaa {$contextName} koskien"
 msgid "emails.notificationCenterDefault.body"
 msgstr "Kirjoita viesti."
 
-msgid "emails.passwordResetConfirm.description"
-msgstr ""
-"Tämä sähköpostiviesti lähetetään rekisteröityneelle käyttäjälle, joka "
-"ilmoittaa unohtaneensa salasanansa tai joka ei pysty kirjautumaan. Viesti "
-"sisältää ULR:n, jonka kautta salasana voidaan vaihtaa."
-
-msgid "emails.announcement.description"
-msgstr "This email is sent when a new announcement is created."
-
 msgid "emails.announcement.body"
 msgstr ""
 "<b>{$announcementTitle}</b><br />\n"
@@ -443,15 +434,10 @@ msgstr ""
 msgid "emails.announcement.subject"
 msgstr "{$announcementTitle}"
 
-msgid "emails.statisticsReportNotification.description"
-msgstr ""
-"This email is automatically sent monthly to editors and journal managers to "
-"provide them a system health overview."
-
 msgid "emails.statisticsReportNotification.body"
 msgstr ""
 "\n"
-"{$name}, <br />\n"
+"{$recipientName}, <br />\n"
 "<br />\n"
 "Toimitustyön raportti {$month}/{$year} on nyt valmis. Kuukautta koskevat "
 "keskeiset luvut ovat alla.<br />\n"
@@ -467,7 +453,7 @@ msgstr ""
 "kuun toimitustyön tilastoista on liitteenä.<br />\n"
 "<br />\n"
 "Terveisin,<br />\n"
-"{$signature}"
+"{$contextSignature}"
 
 msgid "emails.statisticsReportNotification.subject"
 msgstr "Toimitustyötä koskeva raportti {$month}/{$year}"
@@ -502,19 +488,6 @@ msgstr ""
 "have been assigned the task of creating indexes for a submission. It "
 "provides information about the submission and how to access it."
 
-msgid "emails.layoutComplete.description"
-msgstr ""
-"This email from the Layout Editor to the Series Editor notifies them that "
-"the layout process has been completed."
-
-#, fuzzy
-msgid "emails.layoutRequest.description"
-msgstr ""
-"This email from the Series Editor to the Layout Editor notifies them that "
-"they have been assigned the task of performing layout editing on a "
-"submission. It provides information about the submission and how to access "
-"it."
-
 msgid "emails.reviewReinstate.body"
 msgstr ""
 "{$recipientName}:<br />\n"
@@ -528,34 +501,7 @@ msgstr ""
 msgid "emails.reviewReinstate.subject"
 msgstr "Arviointipyyntö uusittu"
 
-msgid "emails.editorAssign.description"
-msgstr ""
-"This email notifies a Series Editor that the Editor has assigned them the "
-"task of overseeing a submission through the editing process. It provides "
-"information about the submission and how to access the press site."
-
-msgid "emails.submissionAckNotUser.description"
-msgstr ""
-"This email, when enabled, is automatically sent to the other authors who are "
-"not users within OMP specified during the submission process."
-
-msgid "emails.reviewerRegister.description"
-msgstr ""
-"This email is sent to a newly registered reviewer to welcome them to the "
-"system and provide them with a record of their username and password."
-
 msgid "emails.userValidate.description"
 msgstr ""
 "This email is sent to a newly registered user to welcome them to the system "
 "and provide them with a record of their username and password."
-
-msgid "emails.userRegister.description"
-msgstr ""
-"This email is sent to a newly registered user to welcome them to the system "
-"and provide them with a record of their username and password."
-
-msgid "emails.passwordReset.description"
-msgstr ""
-"Tämä sähköposti lähetetään rekisteröityneille käyttäjille, kun he ovat "
-"onnistuneesti uusineet salasanansa PASSWORD_RESET_CONFIRM-sähköpostipohjan "
-"kuvaamalla tavalla."
