--- a/locale/gl_ES/emails.po
+++ b/locale/gl_ES/emails.po
@@ -14,12 +14,6 @@ msgstr ""
 msgid "emails.reviewRequest.subject"
 msgstr "Solicitude de revisión do manuscrito"
 
-msgid "emails.editorAssign.description"
-msgstr ""
-"Este correo electrónico notifica ao editor/a da sección que o editor/a "
-"asignoulle a tarefa de supervisar o procedo editial dun envío. Fornece "
-"información sobre o envío e como acceder ao sitio web da publicación."
-
 msgid "emails.editorAssign.body"
 msgstr ""
 "{$recipientName}:<br />\n"
@@ -35,12 +29,6 @@ msgstr ""
 msgid "emails.editorAssign.subject"
 msgstr "Tarefa editorial"
 
-msgid "emails.submissionAckNotUser.description"
-msgstr ""
-"Cando este correo electrónico está activado, envíase automaticamente aos "
-"outros autores/as que non son usuarios de OMP inseridos durante o proceso de "
-"envío."
-
 msgid "emails.submissionAckNotUser.body"
 msgstr ""
 "Ola,<br />\n"
@@ -51,16 +39,10 @@ msgstr ""
 "Se tes algunha dúbida, ponte en contacto comigo. Grazas por considerar esta "
 "editorial como o lugar para amosar o teu traballo.<br />\n"
 "<br />\n"
-"{$signature}"
+"{$contextSignature}"
 
 msgid "emails.submissionAckNotUser.subject"
 msgstr "Agradecemento do envío"
-
-msgid "emails.reviewerRegister.description"
-msgstr ""
-"Este correo electrónico envíase a un revisor/a recentemente rexistrado/a "
-"para darlle a benvida ao sistema e fornecerlle do seu nome de usuario e "
-"contrasinal."
 
 msgid "emails.reviewerRegister.body"
 msgstr ""
@@ -109,12 +91,6 @@ msgstr ""
 msgid "emails.userValidate.subject"
 msgstr "Validar a túa conta"
 
-msgid "emails.userRegister.description"
-msgstr ""
-"Este correo electrónico envíase a un usuario/a recentemente rexistrado/a "
-"para darlle a benvida ao sistema e fornecerlles do seu nome de usuario e "
-"contrasinal."
-
 msgid "emails.userRegister.body"
 msgstr ""
 "{$recipientName}<br />\n"
@@ -134,12 +110,6 @@ msgstr ""
 msgid "emails.userRegister.subject"
 msgstr "Rexistro na editorial"
 
-msgid "emails.passwordReset.description"
-msgstr ""
-"Este correo electrónico envíase a un usuario/a rexistrado/a cando "
-"restableceu correctamente o seu contrasinal despois do proceso descrito no "
-"correo electrónico PASSWORD_RESET_CONFIRM."
-
 msgid "emails.passwordReset.body"
 msgstr ""
 "O seu contrasinal restableceuse correctamente para usalo no sitio web "
@@ -148,16 +118,10 @@ msgstr ""
 "O seu nome de usuario: {$recipientUsername} <br />\n"
 "O seu novo contrasinal: {$password} <br />\n"
 "<br />\n"
-"{$signature}"
+"{$siteContactName}"
 
 msgid "emails.passwordReset.subject"
 msgstr "Restablecer o contrasinal"
-
-msgid "emails.passwordResetConfirm.description"
-msgstr ""
-"Este correo electrónico envíase a un usuario/a rexistrado/a cando indica que "
-"esqueceu o seu contrasinal ou non pode iniciar sesión. Fornece un URL para "
-"restablecer o seu contrasinal."
 
 msgid "emails.passwordResetConfirm.body"
 msgstr ""
@@ -170,7 +134,7 @@ msgstr ""
 "<br />\n"
 "Restablecer o meu contrasinal: {$passwordResetUrl}<br />\n"
 "<br />\n"
-"{$signature}"
+"{$siteContactName}"
 
 msgid "emails.passwordResetConfirm.subject"
 msgstr "Confirmación de restablecemento do contrasinal"
@@ -185,7 +149,7 @@ msgstr ""
 "<br />\n"
 "Isto é un correo electrónico xerado de xeito automático; non responda a esta "
 "mensaxe.<br />\n"
-"{$signature}<hr />{$unsubscribeLink}"
+"{$contextSignature}<hr />{$unsubscribeLink}"
 
 msgid "emails.notification.subject"
 msgstr "Nova notificación de {$contextName}"
