--- a/locale/hu_HU/emails.po
+++ b/locale/hu_HU/emails.po
@@ -68,12 +68,6 @@ msgstr ""
 msgid "emails.reviewRequest.subject"
 msgstr "Kézirat szakmai lektorálásnak kérése"
 
-msgid "emails.editorAssign.description"
-msgstr ""
-"Ez az email értesíti a Sorozatszerkesztőt, hogy a Szerkesztő megbízta egy "
-"beküldött anyag szerkesztési folyamatának felügyeletével. Ez tájékoztatást "
-"ad a beküldött anyagról és arról, hogyan férhet hozzá a honlaphoz."
-
 msgid "emails.editorAssign.body"
 msgstr ""
 "{$recipientName}:<br />\n"
@@ -90,12 +84,6 @@ msgstr ""
 msgid "emails.editorAssign.subject"
 msgstr "Szerkesztői hozzárendelés"
 
-msgid "emails.submissionAckNotUser.description"
-msgstr ""
-"Ha engedélyezve van ez az email, akkor automatikusan értesítést küld azoknak "
-"a szerzőnek, akik nem felhasználói a rendszernek a beküldési munkafolyamat "
-"közben."
-
 msgid "emails.submissionAckNotUser.body"
 msgstr ""
 "Üdvözlet,<br />\n"
@@ -106,16 +94,10 @@ msgstr ""
 "Ha bármilyen kérdése van, kérem, keressen meg. Köszönjük, hogy munkájának "
 "megjelentetéséhez ezt a kiadót választotta.<br />\n"
 "<br />\n"
-"Köszönettel, {$signature}"
+"Köszönettel, {$contextSignature}"
 
 msgid "emails.submissionAckNotUser.subject"
 msgstr "Beküldés visszaigazolása"
-
-msgid "emails.reviewerRegister.description"
-msgstr ""
-"Ez az email az újonnan regisztrált szakmai lektoroknak kerül kiküldésre "
-"üdvözletként és biztosítja őket a felhasználónevük, jelszavuk "
-"nyilvántartásba vételéről."
 
 msgid "emails.reviewerRegister.body"
 msgstr ""
@@ -164,12 +146,6 @@ msgstr ""
 msgid "emails.userValidate.subject"
 msgstr "A fiókja érvényesítése"
 
-msgid "emails.userRegister.description"
-msgstr ""
-"Ez az email az újonnan regisztrált felhasználónak kerül kiküldésre "
-"üdvözlésként, és biztosítja őt a felhasználónevének, jelszavának "
-"nyilvántartásba vételéről."
-
 msgid "emails.userRegister.body"
 msgstr ""
 "{$recipientName}<br />\n"
@@ -189,12 +165,6 @@ msgstr ""
 msgid "emails.userRegister.subject"
 msgstr "Regisztráció a kiadónál"
 
-msgid "emails.passwordReset.description"
-msgstr ""
-"Ez az email egy regisztrált felhasználónak kerül kiküldésre, amikor "
-"sikeresen visszaállításra került a jelszó követve a PASSWORD_RESET_CONFIRM "
-"levélben írtakat."
-
 msgid "emails.passwordReset.body"
 msgstr ""
 "A jelszava visszaállítása sikeresen megtörtént a(z) {$siteTitle} oldalon.<br "
@@ -203,16 +173,10 @@ msgstr ""
 "Felhasználóneve: {$recipientUsername}<br />\n"
 "Új jelszava: {$password}<br />\n"
 "<br />\n"
-"{$signature}"
+"{$siteContactName}"
 
 msgid "emails.passwordReset.subject"
 msgstr "Jelszó visszaállítás"
-
-msgid "emails.passwordResetConfirm.description"
-msgstr ""
-"Ez a levél egy regisztrált felhasználónak kerül kiküldésre, amikor jelzi, "
-"hogy elfelejtette a jelszavát, vagy nem tud bejelentkezni. Ebben van egy "
-"URL, amire kattintva visszaállítható a jelszava."
 
 msgid "emails.passwordResetConfirm.body"
 msgstr ""
@@ -225,7 +189,7 @@ msgstr ""
 "<br />\n"
 "Jelszavam visszaállítása: {$passwordResetUrl}<br />\n"
 "<br />\n"
-"{$signature}"
+"{$siteContactName}"
 
 msgid "emails.passwordResetConfirm.subject"
 msgstr "Jelszó visszaállítás megerősítése"
@@ -240,7 +204,7 @@ msgstr ""
 "<br />\n"
 "Ez egy automatikusan generált e -mail; kérjük ne válaszoljon erre az "
 "üzenetre.<br />\n"
-"{$signature}<hr />{$unsubscribeLink}"
+"{$contextSignature}<hr />{$unsubscribeLink}"
 
 msgid "emails.notification.subject"
 msgstr "Új értesítés a(z) {$contextName} oldaltól"
@@ -372,9 +336,6 @@ msgstr ""
 msgid "emails.reviewCancel.subject"
 msgstr "Szakmai lektorálási felkérés törölve"
 
-msgid "emails.announcement.description"
-msgstr "Ezt az e -mailt új értesítés létrehozásakor küldjük el."
-
 msgid "emails.announcement.body"
 msgstr ""
 "<b>{$announcementTitle}</b><br />\n"
@@ -387,15 +348,10 @@ msgstr ""
 msgid "emails.announcement.subject"
 msgstr "{$announcementTitle}"
 
-msgid "emails.statisticsReportNotification.description"
-msgstr ""
-"Ezt az e-mailt havonta automatikusan elküldjük a szerkesztőknek és a kiadó "
-"menedzsereknek, hogy áttekintést kapjanak a rendszer állapotáról."
-
 msgid "emails.statisticsReportNotification.body"
 msgstr ""
 "\n"
-"Tisztelt {$name}! <br />\n"
+"Tisztelt {$recipientName}! <br />\n"
 "<br />\n"
 "Az oldal egészségének állapotjelentése {$month}, {$year} elérhető.  Ennek a "
 "hónapnak a legfontosabb statisztikái az alábbiakban találhatók.<br />\n"
@@ -412,12 +368,7 @@ msgstr ""
 "havi szerkesztői trendek teljes másolatát mellékeljük.<br />\n"
 "<br />\n"
 "Üdvözlettel,<br />\n"
-"{$signature}"
-
-msgid "emails.layoutComplete.description"
-msgstr ""
-"Ezt az e -mailt az Tördelőszerkesztő küldi a Sorozatszerkesztőnek, jelezve, "
-"hogy a tördelési folyamat befejeződött."
+"{$contextSignature}"
 
 msgid "emails.layoutComplete.body"
 msgstr ""
@@ -431,12 +382,6 @@ msgid "emails.layoutComplete.subject"
 msgstr "Kefelenyomatok elkészültek"
 
 #, fuzzy
-msgid "emails.layoutRequest.description"
-msgstr ""
-"Ezt az e -mailt a Sorozatszerkesztő küldi a Tördelőszerkesztőnek, értesítve "
-"arról, hogy rábízták a beküldött anyag tördelésének elkészítését. "
-"Információt nyújt a beküldött anyagról és annak elérhetőségéről."
-
 msgid "emails.layoutRequest.body"
 msgstr ""
 "<p>Tisztelt {$recipientName}!</p><p>Egy új beküldött anyag készen áll a "
