--- a/locale/mk_MK/emails.po
+++ b/locale/mk_MK/emails.po
@@ -65,12 +65,6 @@ msgstr ""
 msgid "emails.reviewRequest.subject"
 msgstr "Барање за преглед на ракописи"
 
-msgid "emails.editorAssign.description"
-msgstr ""
-"Оваа е-пошта го известува Уредувачот на серии дека Уредникот им ја доделил "
-"задачата да го надгледуваат поднесувањето преку процесот на уредување. Дава "
-"информации за поднесувањето и како да пристапите до страницата за печат."
-
 msgid "emails.editorAssign.body"
 msgstr ""
 "{$recipientName}: <br />\n"
@@ -86,12 +80,6 @@ msgstr ""
 msgid "emails.editorAssign.subject"
 msgstr "Уредувачка задача"
 
-msgid "emails.submissionAckNotUser.description"
-msgstr ""
-"Оваа е-пошта, кога е овозможена, автоматски се испраќа до другите автори кои "
-"не се корисници во рамките на ОМП наведени за време на процесот на "
-"доставување."
-
 msgid "emails.submissionAckNotUser.body"
 msgstr ""
 "Здраво, <br />\n"
@@ -102,15 +90,10 @@ msgstr ""
 "Ако имате какви било прашања, контактирајте ме. Ви благодариме што го "
 "разгледавте овој печат како место за вашата работа. <br />\n"
 "<br />\n"
-"{$signature}"
+"{$contextSignature}"
 
 msgid "emails.submissionAckNotUser.subject"
 msgstr "Признание за поднесување"
-
-msgid "emails.reviewerRegister.description"
-msgstr ""
-"Оваа е-пошта е испратена до новорегистриран прегледувач за да ги поздрави во "
-"системот и да им обезбеди запис за нивното корисничко име и лозинка."
 
 msgid "emails.reviewerRegister.body"
 msgstr ""
@@ -158,11 +141,6 @@ msgstr ""
 msgid "emails.userValidate.subject"
 msgstr "Потврдете ја вашата сметка"
 
-msgid "emails.userRegister.description"
-msgstr ""
-"Оваа е-пошта е испратена до новорегистриран корисник за да ги пречека во "
-"системот и да им обезбеди запис за нивното корисничко име и лозинка."
-
 msgid "emails.userRegister.body"
 msgstr ""
 "{$ userFullName} <br />\n"
@@ -181,35 +159,23 @@ msgstr ""
 msgid "emails.userRegister.subject"
 msgstr "Притиснете Регистрација"
 
-msgid "emails.passwordReset.description"
-msgstr ""
-"Оваа е-пошта е испратена до регистриран корисник кога тој успешно ја "
-"ресетирал својата лозинка следејќи го процесот опишан во е-поштата "
-"PASSWORD_RESET_CONFIRM."
-
 msgid "emails.passwordReset.body"
 msgstr ""
-"Вашата лозинка е успешно ресетирана за употреба со веб-страницата {$ "
-"siteTitle}. <br />\n"
+"Вашата лозинка е успешно ресетирана за употреба со веб-страницата "
+"{$siteTitle}. <br />\n"
 "<br />\n"
-"Вашето корисничко име: {$ корисничко име} <br />\n"
-"Вашата нова лозинка: {$ password} <br />\n"
+"Вашето корисничко име: {$recipientUsername} <br />\n"
+"Вашата нова лозинка: {$password} <br />\n"
 "<br />\n"
-"{$ principalContactSignature}"
+"{$siteContactName}"
 
 msgid "emails.passwordReset.subject"
 msgstr "Ресетирање на лозинка"
 
-msgid "emails.passwordResetConfirm.description"
-msgstr ""
-"Оваа е-пошта се испраќа до регистриран корисник кога тие означуваат дека ја "
-"заборавиле лозинката или не се во можност да се најават. Дава URL-адреса што "
-"можат да ја следат за да ја ресетираат лозинката."
-
 msgid "emails.passwordResetConfirm.body"
 msgstr ""
-"Добивме барање за ресетирање на вашата лозинка за веб-страницата {$ "
-"siteTitle}. <br />\n"
+"Добивме барање за ресетирање на вашата лозинка за веб-страницата "
+"{$siteTitle}. <br />\n"
 "<br />\n"
 "Ако не сте го побарале ова барање, игнорирајте ја оваа е-пошта и лозинката "
 "нема да се смени. Ако сакате да ја ресетирате вашата лозинка, кликнете на "
@@ -217,7 +183,7 @@ msgstr ""
 "<br />\n"
 "Ресетирај ја мојата лозинка: {$passwordResetUrl} <br />\n"
 "<br />\n"
-"{$ principalContactSignature}"
+"{$siteContactName}"
 
 msgid "emails.passwordResetConfirm.subject"
 msgstr "Потврда за ресетирање на лозинка"
@@ -232,7 +198,7 @@ msgstr ""
 "<br />\n"
 "Ова е автоматски генерирана е-пошта; Ве молиме, не одговарајте на оваа "
 "порака. <br />\n"
-"{$signature}<hr />{$unsubscribeLink}"
+"{$contextSignature}<hr />{$unsubscribeLink}"
 
 msgid "emails.notification.subject"
 msgstr "Ново известување од {$contextName}"
@@ -362,9 +328,6 @@ msgstr ""
 msgid "emails.reviewCancel.subject"
 msgstr "Барањето за преглед е откажано"
 
-msgid "emails.announcement.description"
-msgstr "Оваа е-пошта се испраќа кога ќе се креира ново соопштение."
-
 msgid "emails.announcement.body"
 msgstr ""
 "<b> {$announcementTitle} </b> <br />\n"
@@ -377,15 +340,10 @@ msgstr ""
 msgid "emails.announcement.subject"
 msgstr "{$announcementTitle}"
 
-msgid "emails.statisticsReportNotification.description"
-msgstr ""
-"Оваа е-пошта автоматски се испраќа месечно до уредниците и менаџерите на "
-"списанија за да им се обезбеди преглед на здравствениот систем."
-
 msgid "emails.statisticsReportNotification.body"
 msgstr ""
 "\n"
-"{$name}, <br />\n"
+"{$recipientName}, <br />\n"
 "<br />\n"
 "Вашиот извештај за здравјето на печатот за {$month}, {$year} сега е "
 "достапен. Вашите клучни статистики за овој месец се подолу. <br />\n"
@@ -401,7 +359,7 @@ msgstr ""
 "целосна копија од уредничките трендови на овој месец. <br />\n"
 "<br />\n"
 "Со почит, <br />\n"
-"{$signature}"
+"{$contextSignature}"
 
 msgid "emails.statisticsReportNotification.subject"
 msgstr "Уредувачка активност за {$month}, {$year}"
@@ -516,11 +474,6 @@ msgstr ""
 msgid "emails.indexRequest.subject"
 msgstr "Побарај индекс"
 
-msgid "emails.layoutComplete.description"
-msgstr ""
-"Оваа е-пошта од Уредувачот на распоред до Уредникот на сериите ги известува "
-"дека процесот на распоред е завршен."
-
 msgid "emails.layoutComplete.body"
 msgstr ""
 "{$recipientName}: <br />\n"
@@ -535,13 +488,6 @@ msgstr ""
 
 msgid "emails.layoutComplete.subject"
 msgstr "Комплетиран распоред на отисоците на труд"
-
-#, fuzzy
-msgid "emails.layoutRequest.description"
-msgstr ""
-"Оваа е-пошта од Уредувачот на серии до Уредувачот на распоред ги известува "
-"дека им е доделена задача да вршат уредување на распоред на поднесок. Дава "
-"информации за поднесoкот и начинот на пристап до него."
 
 #, fuzzy
 msgid "emails.layoutRequest.body"
