--- a/locale/nb_NO/emails.po
+++ b/locale/nb_NO/emails.po
@@ -11,9 +11,6 @@ msgstr ""
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
 "X-Generator: Weblate 3.9.1\n"
 
-msgid "emails.announcement.description"
-msgstr "Denne e-posten vil bli sendt når et nytt oppslag opprettes."
-
 msgid "emails.announcement.body"
 msgstr ""
 "<b>{$announcementTitle}</b><br />\n"
@@ -25,15 +22,10 @@ msgstr ""
 msgid "emails.announcement.subject"
 msgstr "{$announcementTitle}"
 
-msgid "emails.statisticsReportNotification.description"
-msgstr ""
-"Denne e-posten blir automatisk sendt en gang i måneden til redaktører og "
-"magasinredaktører for å gi dem en oversikt over systemets tilstand."
-
 msgid "emails.statisticsReportNotification.body"
 msgstr ""
 "\n"
-"{$name}, <br />\n"
+"{$recipientName}, <br />\n"
 "<br />\n"
 "Din utgivers tilstandsrapport for {$month}, {$year} er nå tilgjengelig. De "
 "statistiske nøkkeltallene ses nedenfor.<br />\n"
@@ -49,7 +41,7 @@ msgstr ""
 "komplett kopi av denne månedens redaksjonelle udvikling er vedlagt.<br />\n"
 "<br />\n"
 "Med venlig hilsen<br />\n"
-"{$signature}"
+"{$contextSignature}"
 
 msgid "emails.statisticsReportNotification.subject"
 msgstr "Redaksjonel aktivitet for {$month}, {$year}"
@@ -164,11 +156,6 @@ msgstr ""
 msgid "emails.indexRequest.subject"
 msgstr "Forespørsel om indeksering"
 
-msgid "emails.layoutComplete.description"
-msgstr ""
-"Denne e-mail fra layoutredaktøren til serieredaktøren underretter dem om at "
-"layoutprocessen er fullført."
-
 msgid "emails.layoutComplete.body"
 msgstr ""
 "{$recipientName}:<br />\n"
@@ -183,14 +170,6 @@ msgstr ""
 
 msgid "emails.layoutComplete.subject"
 msgstr "Sideoppsett ferdiggjort"
-
-#, fuzzy
-msgid "emails.layoutRequest.description"
-msgstr ""
-"Denne e-postmeldingen fra serieredaktøren til layoutredigereren informerer "
-"dem om at han / hun har fått i oppgave å redigere layouten til en "
-"innlevering. Den inneholder informasjon om innleveringen og hvordan man får "
-"tilgang til den."
 
 #, fuzzy
 msgid "emails.layoutRequest.body"
@@ -386,13 +365,6 @@ msgstr ""
 msgid "emails.reviewRequest.subject"
 msgstr "Forespørsel om fagfellevurdering"
 
-msgid "emails.editorAssign.description"
-msgstr ""
-"Denne e-posten varsler en serieredaktør om at redaktøren har tildelt "
-"oppgaven med å følge et manuskript gjennom redigeringsprosessen. Den "
-"inneholder informasjon om innleveringen og hvordan du får tilgang til "
-"utgiverens nettsider."
-
 msgid "emails.editorAssign.body"
 msgstr ""
 "{$recipientName}:<br />\n"
@@ -409,11 +381,6 @@ msgstr ""
 msgid "emails.editorAssign.subject"
 msgstr "Redaksjonelt oppdrag"
 
-msgid "emails.submissionAckNotUser.description"
-msgstr ""
-"Når denne e-posten er aktivert, sendes meldinger automatisk til de andre "
-"forfatterne som er oppført og som ikke er registrert i OMP."
-
 msgid "emails.submissionAckNotUser.body"
 msgstr ""
 "Hei<br />\n"
@@ -424,15 +391,10 @@ msgstr ""
 "Hvis du har spørsmål, er du velkommen til å kontakte meg. Takk for at du har "
 "valgt at publisere hos oss.<br />\n"
 "<br />\n"
-"{$signature}"
+"{$contextSignature}"
 
 msgid "emails.submissionAckNotUser.subject"
 msgstr "Innleveringsbekreftelse"
-
-msgid "emails.reviewerRegister.description"
-msgstr ""
-"Denne e-posten blir sendt til nylig registrerte fagfeller for å ønske dem "
-"velkommen til systemet og for å informere dem om brukernavn og passord."
 
 msgid "emails.reviewerRegister.body"
 msgstr ""
@@ -478,11 +440,6 @@ msgstr ""
 msgid "emails.userValidate.subject"
 msgstr "Valider kontoen din"
 
-msgid "emails.userRegister.description"
-msgstr ""
-"Denne e-posten blir sendt til nylig registrerte brukere for å ønske dem "
-"velkommen til systemet og gi dem brukernavn og passord."
-
 msgid "emails.userRegister.body"
 msgstr ""
 "{$recipientName} <br />\n"
@@ -501,12 +458,6 @@ msgstr ""
 msgid "emails.userRegister.subject"
 msgstr "Registrering hos utgiver"
 
-msgid "emails.passwordReset.description"
-msgstr ""
-"Denne e-posten vil bli sendt til registrerte brukere etter at de har "
-"tilbakestilt passordet etter å ha fulgt prosessen beskrevet i e-posten "
-"PASSWORD_RESET_CONFIRM."
-
 msgid "emails.passwordReset.body"
 msgstr ""
 "Passordet ditt er tilbakestilt og kan brukes på nettstedet {$siteTitle}. <br "
@@ -515,16 +466,10 @@ msgstr ""
 "Brukernavnet ditt: {$recipientUsername} <br />\n"
 "Ditt nye passord: {$password} <br />\n"
 "<br />\n"
-"{$signature}"
+"{$siteContactName}"
 
 msgid "emails.passwordReset.subject"
 msgstr "Nullstill passord"
-
-msgid "emails.passwordResetConfirm.description"
-msgstr ""
-"Denne e-posten blir sendt til registrerte brukere når de indikerer at de har "
-"glemt passordet eller ikke kan logge inn. Den inneholder en URL som de kan "
-"følge for å tilbakestille passordet."
 
 msgid "emails.passwordResetConfirm.body"
 msgstr ""
@@ -537,7 +482,7 @@ msgstr ""
 "<br />\n"
 "Tilbakestill passordet mitt: {$passwordResetUrl} <br />\n"
 "<br />\n"
-"{$signature}"
+"{$siteContactName}"
 
 msgid "emails.passwordResetConfirm.subject"
 msgstr "Bekreft tilbakestilling av passord"
@@ -553,7 +498,7 @@ msgstr ""
 "<br />\n"
 "Dette er en automatisk generert e-post; ikke svar på denne meldingen. <br />"
 "\n"
-"{$signature}"
+"{$contextSignature}"
 
 msgid "emails.notification.subject"
 msgstr "Ny melding fra {$contextName}"
