--- a/locale/pl_PL/emails.po
+++ b/locale/pl_PL/emails.po
@@ -55,11 +55,6 @@ msgstr ""
 msgid "emails.submissionAckNotUser.subject"
 msgstr "Potwierdzenie zgłoszenia"
 
-msgid "emails.reviewerRegister.description"
-msgstr ""
-"Ten mail jest wysłany do nowo zarejestrowanych recenzentów, aby powitać ich "
-"na naszej platformie oraz dostarczyć login i hasło."
-
 msgid "emails.reviewerRegister.subject"
 msgstr "Zarejestruj się jako recenzent na  {$contextName}"
 
@@ -101,19 +96,8 @@ msgstr ""
 msgid "emails.passwordResetConfirm.subject"
 msgstr "Potwierdzenie zresetowania hasła"
 
-msgid "emails.userRegister.description"
-msgstr ""
-"Ten mail jest wysyłany do nowo zarejestrowanych użytkowników naszej "
-"platformy, aby dostarczyć im login i hasło."
-
 msgid "emails.userRegister.subject"
 msgstr "Rejestracja"
-
-msgid "emails.passwordReset.description"
-msgstr ""
-"Ten email jest wysłany do zarejestrowanego użytkownika, kiedy pomyślnie "
-"zresetowano hasło zgodnie z procesem opisanym w wiadomości o resetowaniu "
-"hasła."
 
 msgid "emails.passwordReset.body"
 msgstr ""
@@ -122,16 +106,10 @@ msgstr ""
 "Twój login: {$recipientUsername}<br />\n"
 "Twoje nowe hasło: {$password}<br />\n"
 "<br />\n"
-"{$signature}"
+"{$siteContactName}"
 
 msgid "emails.passwordReset.subject"
 msgstr "Resetowanie hasła"
-
-msgid "emails.passwordResetConfirm.description"
-msgstr ""
-"Ten email został wysłany do zarejestrowanego użytkownika, kiedy zgłosił, że "
-"zapomniał hasła lub nie może się zalogować. Wiadomość zawiera URL, którego "
-"należy użyć, aby zresetować hasło."
 
 msgid "emails.passwordResetConfirm.body"
 msgstr ""
@@ -143,7 +121,7 @@ msgstr ""
 "<br />\n"
 "Zresetuj moje hasło: {$passwordResetUrl}<br />\n"
 "<br />\n"
-"{$signature}"
+"{$siteContactName}"
 
 #, fuzzy
 msgid "emails.notification.body"
@@ -156,7 +134,7 @@ msgstr ""
 "<br />\n"
 "Ten mail jest automatycznie wygenerowany; proszę nie odpowiadać na tę "
 "wiadomość.<br />\n"
-"{$signature}"
+"{$contextSignature}"
 
 msgid "emails.reviewCancel.subject"
 msgstr "Prośba o anulowanie recenzji"
@@ -197,7 +175,7 @@ msgstr ""
 msgid "emails.statisticsReportNotification.body"
 msgstr ""
 "\n"
-"{$name}, <br />\n"
+"{$recipientName}, <br />\n"
 "<br />\n"
 "Raport o sprawności wydawnictwa dla {$month}, {$year} jest teraz dostępny. "
 "Poniżej Twoje najważniejsze statystyki dla tego miesiąca.<br />\n"
@@ -213,7 +191,7 @@ msgstr ""
 "Załączono pełną wersję miesięcznych tendencji redakcyjnych.<br />\n"
 "<br />\n"
 "Z poważaniem,<br />\n"
-"{$signature}"
+"{$contextSignature}"
 
 msgid "emails.indexRequest.body"
 msgstr ""
@@ -236,11 +214,6 @@ msgstr ""
 "<br />\n"
 "{$signature}"
 
-msgid "emails.statisticsReportNotification.description"
-msgstr ""
-"Ten email jest automatycznie wysyłany co miesiąc do redaktorów i menedżerów "
-"czasopisma, aby dać im wgląd w sprawność systemu."
-
 msgid "emails.statisticsReportNotification.subject"
 msgstr "Zadanie redakcyjne dla {$month}, {$year}"
 
@@ -256,12 +229,6 @@ msgid "emails.indexComplete.subject"
 msgstr "Ukończono Indeks Szczotki Drukarskiej"
 
 #, fuzzy
-msgid "emails.layoutRequest.description"
-msgstr ""
-"Ten email od Redaktora Serii do Redaktora Składu zawiera informacje o "
-"przypisaniu ich do zadania edycji wersji graficznej zgłoszenia. Dostarcza "
-"też informacje o zgłoszeniu i dostępie do niego."
-
 msgid "emails.layoutComplete.body"
 msgstr ""
 "{$recipientName}:<br />\n"
@@ -369,7 +336,7 @@ msgstr ""
 "W razie pytań, proszę skontaktuj się ze mną. Dziękujemy za wybranie naszego "
 "wydawnictwa.<br />\n"
 "<br />\n"
-"{$signature}"
+"{$contextSignature}"
 
 msgid "emails.reviewerRegister.body"
 msgstr ""
@@ -392,16 +359,8 @@ msgstr ""
 "Dziękujemy,<br />\n"
 "{$signature}"
 
-msgid "emails.submissionAckNotUser.description"
-msgstr ""
-"Ten email, uaktywniony, jest automatycznie wysyłany do innych autorów, "
-"którzy nie są użytkownikami OMP określonego w procesie zgłoszenia."
-
 msgid "emails.editorAssign.subject"
 msgstr "Zadania redakcyjne"
-
-msgid "emails.announcement.description"
-msgstr "Ten email jest wysyłany, kiedy pojawia się nowe ogłoszenie."
 
 msgid "emails.announcement.body"
 msgstr ""
@@ -482,11 +441,6 @@ msgstr ""
 msgid "emails.indexRequest.subject"
 msgstr "Prośba o indeks"
 
-msgid "emails.layoutComplete.description"
-msgstr ""
-"Ten mail jest wysłany od edytora układu scalonego do redaktora serii z "
-"informacją, że proces składania tekstu został zakończony."
-
 msgid "emails.editorDecisionAccept.body"
 msgstr ""
 "{$authors}:<br />\n"
@@ -550,9 +504,3 @@ msgstr ""
 
 msgid "emails.reviewResponseOverdueAuto.subject"
 msgstr "Prośba o recenzję rękopisu"
-
-msgid "emails.editorAssign.description"
-msgstr ""
-"Ta wiadomość powiadamia redaktora serii, że został przypisany do "
-"nadzorowania zgłoszenia podczas procesu redakcyjnego. Dostarcza informacje o "
-"zgłoszeniu oraz dostępie do strony wydawnictwa."
