--- a/locale/pt_BR/emails.po
+++ b/locale/pt_BR/emails.po
@@ -28,7 +28,7 @@ msgstr ""
 "<br />\n"
 "Este é um e-mail gerado automaticamente; por favor não responda a esta "
 "mensagem. <br />\n"
-"{$signature}<hr />{$unsubscribeLink}"
+"{$contextSignature}<hr />{$unsubscribeLink}"
 
 msgid "emails.passwordResetConfirm.subject"
 msgstr "Confirmação de redefinição de senha"
@@ -41,10 +41,7 @@ msgstr ""
 "<br />\n"
 "Redefinir senha: {$passwordResetUrl}<br />\n"
 "<br />\n"
-"{$signature}"
-
-msgid "emails.passwordResetConfirm.description"
-msgstr "Esta mensagem é enviada a usuário cadastrados que indicam ter esquecido a senha ou não conseguem acessar o sistema. A mensagem oferece um endereço para redefinir sua senha."
+"{$siteContactName}"
 
 msgid "emails.passwordReset.subject"
 msgstr "Senha redefinida"
@@ -56,10 +53,7 @@ msgstr ""
 "Login: {$recipientUsername}<br />\n"
 "Nova senha: {$password}<br />\n"
 "<br />\n"
-"{$signature}"
-
-msgid "emails.passwordReset.description"
-msgstr "Esta mensagem é enviada a usuário cadastrado quando a senha é redefinida com sucesso, seguindo o processo descrito em PASSWORD_RESET_CONFIRM."
+"{$siteContactName}"
 
 msgid "emails.userRegister.subject"
 msgstr "Cadastro na editora"
@@ -79,9 +73,6 @@ msgstr ""
 "<br />\n"
 "Atenciosamente,<br />\n"
 "{$signature}"
-
-msgid "emails.userRegister.description"
-msgstr "Esta mensagem é enviada a novos usuários cadastrados, como boas-vindas e oferecendo o registro de seus dados de acesso."
 
 msgid "emails.userValidate.subject"
 msgstr "Validar seu cadastro"
@@ -123,9 +114,6 @@ msgstr ""
 "Atenciosamente,<br />\n"
 "{$signature}"
 
-msgid "emails.reviewerRegister.description"
-msgstr "Esta mensagem é enviada a novos usuários cadastrados, como boas-vindas e oferecendo o registro de seus dados de acesso."
-
 msgid "emails.submissionAckNotUser.subject"
 msgstr "Agradecimento pela submissão"
 
@@ -137,10 +125,7 @@ msgstr ""
 "<br />\n"
 "Em caso de dúvidas, entre em contato. Agradecemos por considerar nossa editora como um veículo para seus trabalhos.<br />\n"
 "<br />\n"
-"{$signature}"
-
-msgid "emails.submissionAckNotUser.description"
-msgstr "Quando habilitada, esta mensagem é enviada automaticamente aos coautores informados durante o processo de submissão, que não estão cadastrados no OMP."
+"{$contextSignature}"
 
 msgid "emails.editorAssign.subject"
 msgstr "Tarefa editorial"
@@ -155,12 +140,6 @@ msgstr ""
 "Login: {$recipientUsername}<br />\n"
 "<br />\n"
 "Atenciosamente,"
-
-msgid "emails.editorAssign.description"
-msgstr ""
-"Esta mensagem notifica o editor de série que um editor o incumbiu da tarefa "
-"de acompanhar o processo editorial de uma submissão. Fornece informações "
-"sobre a submissão e de acesso ao site da editora."
 
 msgid "emails.reviewRequest.subject"
 msgstr "Solicitação de Avaliação"
@@ -293,9 +272,6 @@ msgstr ""
 "Caso não tenha disponibilidade para assumir esta tarefa no momento, ou em caso de dúvidas, entre em contato. Agradecemos sua contribuição aos trabalhos da editora."
 
 #, fuzzy
-msgid "emails.layoutRequest.description"
-msgstr "Esta mensagem é enviada pelo editor de série ao editor de layout, solicitando a produção de uma composição da submissão. Fornece instruções sobre a submissão e como acessá-la."
-
 msgid "emails.layoutComplete.subject"
 msgstr "Composições concluídas"
 
@@ -306,9 +282,6 @@ msgstr ""
 "{$submissionUrl}\">{ $submissionTitle}</a><br />{$contextName}</p><p>Se você "
 "tiver alguma dúvida, entre em contato comigo.</p><p>Atenciosamente,</p><p>{ "
 "$senderName}</p>"
-
-msgid "emails.layoutComplete.description"
-msgstr "Esta mensagem é enviada pelo editor de layout ao editor de série, notificando-o da conclusão da criação das composições."
 
 msgid "emails.indexRequest.subject"
 msgstr "Solicitação de índice"
@@ -426,9 +399,6 @@ msgstr ""
 "Atenciosamente,<br />\n"
 "{$signature}<br />\n"
 
-msgid "emails.announcement.description"
-msgstr "Este email é enviado quando uma nova notícia é criada."
-
 msgid "emails.announcement.body"
 msgstr ""
 "<b> {$announcementTitle}</b> <br />\n"
@@ -440,15 +410,10 @@ msgstr ""
 msgid "emails.announcement.subject"
 msgstr "{$announcementTitle}"
 
-msgid "emails.statisticsReportNotification.description"
-msgstr ""
-"Esse e-mail é enviado automaticamente mensalmente para editores e gerentes "
-"para fornecer uma visão geral da editora."
-
 msgid "emails.statisticsReportNotification.body"
 msgstr ""
 "\n"
-"{$name}, <br />\n"
+"{$recipientName}, <br />\n"
 "<br />\n"
 "O relatório da sua editora de {$month}, {$year} já se encontra disponível. "
 "As estatísticas chave deste mês encontram-se disponíveis abaixo.<br />\n"
@@ -464,7 +429,7 @@ msgstr ""
 "anexada uma cópia das tendências editoriais deste mês.<br />\n"
 "<br />\n"
 "Atentamente,<br />\n"
-"{$signature}"
+"{$contextSignature}"
 
 msgid "emails.statisticsReportNotification.subject"
 msgstr "Atividade editorial de {$month}, {$year}"
