--- a/locale/pt_PT/emails.po
+++ b/locale/pt_PT/emails.po
@@ -15,11 +15,6 @@ msgstr ""
 msgid "emails.userRegister.subject"
 msgstr "Registo da Editora"
 
-msgid "emails.passwordReset.description"
-msgstr ""
-"Este e-mail é enviada a utilizadores registados quando a senha é alterada "
-"com sucesso quando seguem o processo do e-mail PASSWORD_RESET_CONFIRM."
-
 msgid "emails.passwordReset.body"
 msgstr ""
 "A sua senha foi alterada com sucesso para o site de {$siteTitle}.<br />\n"
@@ -27,16 +22,10 @@ msgstr ""
 "Nome de utilizador: {$recipientUsername}<br />\n"
 "Senha: {$password}<br />\n"
 "<br />\n"
-"{$signature}"
+"{$siteContactName}"
 
 msgid "emails.passwordReset.subject"
 msgstr "Senha alterada"
-
-msgid "emails.passwordResetConfirm.description"
-msgstr ""
-"Este e-mail é enviado para um utilizador registado que indique que se "
-"esqueceu da sua senha ou não consiga aceder ao sistema. Fornece um URL para "
-"alteração de senha."
 
 msgid "emails.passwordResetConfirm.body"
 msgstr ""
@@ -48,7 +37,7 @@ msgstr ""
 "<br />\n"
 "Alterar a minha senha: {$passwordResetUrl}<br />\n"
 "<br />\n"
-"{$signature}"
+"{$siteContactName}"
 
 msgid "emails.passwordResetConfirm.subject"
 msgstr "Confirmação de Alteração de Senha"
@@ -63,15 +52,10 @@ msgstr ""
 "<br />\n"
 "Este é um e-mail gerado automaticamente; por favor não responda a esta "
 "mensagem.<br />\n"
-"{$signature}<hr />{$unsubscribeLink}"
+"{$contextSignature}<hr />{$unsubscribeLink}"
 
 msgid "emails.notification.subject"
 msgstr "Nova notificação de {$contextName}"
-
-msgid "emails.reviewerRegister.description"
-msgstr ""
-"Este e-mail é enviado para novos utilizadores registados como revisores como "
-"boas-vindas ao sistema e fornecer o nome de utilizador e senha."
 
 msgid "emails.reviewerRegister.body"
 msgstr ""
@@ -118,11 +102,6 @@ msgstr ""
 msgid "emails.userValidate.subject"
 msgstr "Validar a sua Conta"
 
-msgid "emails.userRegister.description"
-msgstr ""
-"Este e-mail é enviado a novos utilizadores que se registaram para lhes dar "
-"as boas-vindas ao sistema e fornecer-lhes o nome de utilizador e senha."
-
 msgid "emails.userRegister.body"
 msgstr ""
 "{$recipientName}<br />\n"
@@ -164,12 +143,6 @@ msgstr ""
 msgid "emails.reviewRequest.subject"
 msgstr "Pedido de revisão"
 
-msgid "emails.editorAssign.description"
-msgstr ""
-"Este e-mail notifica o Editor de Secção que o Editor lhe atribuiu a tarefa "
-"de supervisionar o processo editorial da submissão. Fornece informação sobre "
-"a submissão e como aceder-lhe no site da editora."
-
 msgid "emails.editorAssign.body"
 msgstr ""
 "{$recipientName}:<br />\n"
@@ -186,12 +159,6 @@ msgstr ""
 msgid "emails.editorAssign.subject"
 msgstr "Tarefa editorial"
 
-msgid "emails.submissionAckNotUser.description"
-msgstr ""
-"Este e-mail, quando ativo, é enviado automaticamente para os co-autores que "
-"não são utilizadores registados do OMP, inseridos durante o processo de "
-"submissão."
-
 msgid "emails.submissionAckNotUser.body"
 msgstr ""
 "Olá,<br />\n"
@@ -202,7 +169,7 @@ msgstr ""
 "Em caso de dúvidas, entre em contacto. Agradecemos por considerar a nossa "
 "editora como veículo para os seus trabalhos.<br />\n"
 "<br />\n"
-"{$signature}"
+"{$contextSignature}"
 
 msgid "emails.submissionAckNotUser.subject"
 msgstr "Agradecimento pela submissão"
@@ -387,21 +354,10 @@ msgid "emails.layoutComplete.subject"
 msgstr "Composições concluídas"
 
 #, fuzzy
-msgid "emails.layoutRequest.description"
-msgstr ""
-"Este e-mail é enviado pelo Editor de Série ao Editor de Layout para o "
-"notificar de que foi designado para realizar a tarefa de edição de layout da "
-"submissão. Fornece informação sobre a submissão e como aceder-lhe."
-
-msgid "emails.statisticsReportNotification.description"
-msgstr ""
-"Este e-mail é enviado automaticamente de forma mensal a editores e editores-"
-"gestores para fornecer-lhes uma visão geral da editora."
-
 msgid "emails.statisticsReportNotification.body"
 msgstr ""
 "\n"
-"{$name}, <br />\n"
+"{$recipientName}, <br />\n"
 "<br />\n"
 "O relatório da sua editora de {$month}, {$year} já se encontra disponível. "
 "As estatísticas chave deste mês encontram-se disponíveis abaixo.<br />\n"
@@ -417,7 +373,7 @@ msgstr ""
 "anexada uma cópia das tendências editoriais deste mês.<br />\n"
 "<br />\n"
 "Atentamente,<br />\n"
-"{$signature}"
+"{$contextSignature}"
 
 msgid "emails.statisticsReportNotification.subject"
 msgstr "Atividade editorial em {$month}, {$year}"
@@ -535,11 +491,6 @@ msgstr ""
 msgid "emails.indexRequest.subject"
 msgstr "Solicitar índice"
 
-msgid "emails.layoutComplete.description"
-msgstr ""
-"Este e-mail é enviado pelo Editor de Layout para o Editor de Série para o "
-"notificar que o processo de layout foi concluído."
-
 msgid "emails.layoutComplete.body"
 msgstr ""
 "<p>{$recipientName}:<p>\n"
@@ -550,9 +501,6 @@ msgstr ""
 "<p>\n"
 "Se tiver alguma questão, não hesite em contactar.<p>\n"
 "Cumprimentos,</p><p>{$senderName}</p>"
-
-msgid "emails.announcement.description"
-msgstr "Este e-mail é enviado quando uma nova notícia é criada."
 
 msgid "emails.announcement.body"
 msgstr ""
