--- a/locale/ru_RU/emails.po
+++ b/locale/ru_RU/emails.po
@@ -44,12 +44,6 @@ msgstr ""
 msgid "emails.reviewRequest.subject"
 msgstr "Запрос на рецензирование рукописи"
 
-msgid "emails.editorAssign.description"
-msgstr ""
-"Это письмо уведомляет Редактора Серии изданий о том, что ему поручен "
-"контроль прохождения материала по стадиям редакционного процесса. В письме "
-"содержится информация о рукописи и о том, как войти на сайт журнала."
-
 msgid "emails.editorAssign.body"
 msgstr ""
 "Здравствуйте, {$recipientName}!<br />\n"
@@ -66,12 +60,6 @@ msgstr ""
 msgid "emails.editorAssign.subject"
 msgstr "Назначение редактором"
 
-msgid "emails.submissionAckNotUser.description"
-msgstr ""
-"Это письмо (если эта возможность включена) автоматически отправляется другим "
-"авторам, которые не являются пользователями OMP, указанным в процессе "
-"отправки материала."
-
 msgid "emails.submissionAckNotUser.body"
 msgstr ""
 "Здравствуйте!<br />\n"
@@ -82,15 +70,10 @@ msgstr ""
 "Если у Вас возникнут какие-то вопросы, пожалуйста, свяжитесь со мной. "
 "Спасибо за выбор нашего Издательства для публикации Вашей работы.<br />\n"
 "<br />\n"
-"{$signature}"
+"{$contextSignature}"
 
 msgid "emails.submissionAckNotUser.subject"
 msgstr "Благодарность за подачу рукописи"
-
-msgid "emails.reviewerRegister.description"
-msgstr ""
-"Это письмо отправляется вновь зарегистрированному рецензенту, приветствуя "
-"его в системе и сообщая ему имя пользователя и пароль для доступа к сайту."
 
 msgid "emails.reviewerRegister.body"
 msgstr ""
@@ -138,11 +121,6 @@ msgstr ""
 msgid "emails.userValidate.subject"
 msgstr "Подтвердите свою учетную запись"
 
-msgid "emails.userRegister.description"
-msgstr ""
-"Это письмо отправляется вновь зарегистрированному пользователю, приветствуя "
-"его в системе и сообщая ему имя пользователя и пароль для доступа к сайту."
-
 msgid "emails.userRegister.body"
 msgstr ""
 "Здравствуйте, {$recipientName}!<br />\n"
@@ -162,12 +140,6 @@ msgstr ""
 msgid "emails.userRegister.subject"
 msgstr "Регистрация издательства"
 
-msgid "emails.passwordReset.description"
-msgstr ""
-"Это письмо отправляется зарегистрированному пользователю, когда он успешно "
-"сбросил свой пароль в соответствии с процедурой, описанной в письме "
-"PASSWORD_RESET_CONFIRM."
-
 msgid "emails.passwordReset.body"
 msgstr ""
 "Ваш пароль на сайте «{$siteTitle}» был успешно сброшен.<br />\n"
@@ -175,16 +147,10 @@ msgstr ""
 "Имя пользователя: {$recipientUsername}<br />\n"
 "Ваш Новый Пароль: {$password}<br />\n"
 "<br />\n"
-"{$signature}"
+"{$siteContactName}"
 
 msgid "emails.passwordReset.subject"
 msgstr "Сброс пароля"
-
-msgid "emails.passwordResetConfirm.description"
-msgstr ""
-"Это письмо отправляется зарегистрированному пользователю, когда он сообщает, "
-"что забыл пароль или не может войти на сайт. В письме содержится ссылка (URL)"
-", перейдя по которой пользователь сможет сбросить свой пароль."
 
 msgid "emails.passwordResetConfirm.body"
 msgstr ""
@@ -196,7 +162,7 @@ msgstr ""
 "<br />\n"
 "Сбросить мой пароль: {$passwordResetUrl}<br />\n"
 "<br />\n"
-"{$signature}"
+"{$siteContactName}"
 
 msgid "emails.passwordResetConfirm.subject"
 msgstr "Подтверждение сброса пароля"
@@ -211,7 +177,7 @@ msgstr ""
 "<br />\n"
 "Это письмо сгенерировано автоматически, пожалуйста, не отвечаыте на него.<br "
 "/>\n"
-"{$signature}8<hr />{$unsubscribeLink}"
+"{$contextSignature}<hr />{$unsubscribeLink}"
 
 msgid "emails.announcement.subject"
 msgstr "{$announcementTitle}"
@@ -284,18 +250,10 @@ msgstr ""
 msgid "emails.statisticsReportNotification.subject"
 msgstr "Активность журнала за {$month} {$year} года"
 
-msgid "emails.announcement.description"
-msgstr "Это письмо отправляется при создании нового объявления."
-
-msgid "emails.statisticsReportNotification.description"
-msgstr ""
-"Это письмо каждый месяц автоматически отправляется редакторам и управляющим "
-"журнала, чтобы у них было представление о работе системы."
-
 msgid "emails.statisticsReportNotification.body"
 msgstr ""
 "\n"
-"{$name}, <br />\n"
+"{$recipientName}, <br />\n"
 "<br />\n"
 "Доступен отчет о состоянии Вашего Издательства за {$month}, {$year} . "
 "Ключевые показатели за этот месяц следующие:<br />\n"
@@ -311,7 +269,7 @@ msgstr ""
 "реедакторским трендам за этот месяц  во вложении.<br />\n"
 "<br />\n"
 "С уважением,<br />\n"
-"{$signature}"
+"{$contextSignature}"
 
 msgid "emails.notificationCenterDefault.description"
 msgstr ""
@@ -421,11 +379,6 @@ msgstr ""
 msgid "emails.indexRequest.subject"
 msgstr "Запрос на индексирование"
 
-msgid "emails.layoutComplete.description"
-msgstr ""
-"Это письмо верстальщика, отправляемое редактору раздела с уведомлением о "
-"том, что верстка завершена."
-
 msgid "emails.layoutComplete.body"
 msgstr ""
 "Здравствуйте, {$recipientName}!<br />\n"
@@ -439,13 +392,6 @@ msgstr ""
 
 msgid "emails.layoutComplete.subject"
 msgstr "Гранки сделаны"
-
-#, fuzzy
-msgid "emails.layoutRequest.description"
-msgstr ""
-"Это письмо редактора раздела, отправляемое верстальщику с уведомлением о "
-"том, что ему поручено выполнить верстку материала. В письме содержится "
-"информация о материале и о том, как получить к нему доступ."
 
 #, fuzzy
 msgid "emails.layoutRequest.subject"
