--- a/locale/tr_TR/emails.po
+++ b/locale/tr_TR/emails.po
@@ -56,7 +56,7 @@ msgstr ""
 "<br />\n"
 "Bu otomatik olarak oluşturulan bir e-postadır; lütfen bu mesajı "
 "yanıtlamayın.<br />\n"
-"{$signature}<hr />{$unsubscribeLink}"
+"{$contextSignature}<hr />{$unsubscribeLink}"
 
 msgid "emails.passwordResetConfirm.subject"
 msgstr "Parola Sıfırlama Onayı"
@@ -71,13 +71,7 @@ msgstr ""
 "<br />\n"
 "Parolamı sıfırla: {$passwordResetUrl}<br />\n"
 "<br />\n"
-"{$signature}"
-
-msgid "emails.passwordResetConfirm.description"
-msgstr ""
-"Bu e-posta, kayıtlı bir kullanıcıya parolasını unuttuğunu veya giriş "
-"yapamadığını belirttiği zaman gönderilir. Parolalarını sıfırlamak için "
-"izleyebilecekleri bir URL sağlar."
+"{$siteContactName}"
 
 msgid "emails.passwordReset.subject"
 msgstr "Parola Sıfırlama"
@@ -90,13 +84,7 @@ msgstr ""
 "Kullanıcı adınız: {$recipientUsername}<br />\n"
 "Yeni parolanız: {$password}<br />\n"
 "<br />\n"
-"{$signature}"
-
-msgid "emails.passwordReset.description"
-msgstr ""
-"Bu e-posta, kayıtlı bir kullanıcıya, PASSWORD_RESET_CONFIRM başlıklı e-"
-"postada açıklanan işlemin ardından parolasını başarıyla sıfırladığında "
-"gönderilir."
+"{$siteContactName}"
 
 msgid "emails.userRegister.subject"
 msgstr "Yayınevi Kaydı"
@@ -115,11 +103,6 @@ msgstr ""
 "<br />\n"
 "Teşekkür ederim,<br />\n"
 "{$signature}"
-
-msgid "emails.userRegister.description"
-msgstr ""
-"Bu e-posta, yeni kayıtlı bir kullanıcıya sisteme hoş geldiniz demek ve "
-"kaydedilen kullanıcı adı ve parolayı sunmak için gönderilir."
 
 msgid "emails.userValidate.subject"
 msgstr "Hesabınızı Doğrulayın"
@@ -165,11 +148,6 @@ msgstr ""
 "<br />Teşekkür ederim,<br />\n"
 "{$signature}"
 
-msgid "emails.reviewerRegister.description"
-msgstr ""
-"Bu e-posta, yeni kayıtlı bir danışmana sisteme hoş geldiniz demek ve "
-"kaydedilen kullanıcı adı ve parolayı sunmak için gönderilir."
-
 msgid "emails.submissionAckNotUser.subject"
 msgstr "Gönderi Kabulü"
 
@@ -184,12 +162,7 @@ msgstr ""
 "çalışmanız için bir buluşma yeri olarak gördüğünüz için teşekkür ederiz.<br "
 "/>\n"
 "<br />\n"
-"{$signature}"
-
-msgid "emails.submissionAckNotUser.description"
-msgstr ""
-"Bu e-posta etkinleştirildiğinde, gönderim işlemi sırasında belirtilen ancak "
-"OMP dahilinde kullanıcı olmayan diğer yazarlara otomatik olarak gönderilir."
+"{$contextSignature}"
 
 msgid "emails.editorAssign.subject"
 msgstr "Editoryal Atama"
@@ -204,12 +177,6 @@ msgstr ""
 "Kullanıcı adı: {$recipientUsername}<br />\n"
 "<br />\n"
 "Teşekkür ederim,"
-
-msgid "emails.editorAssign.description"
-msgstr ""
-"Bu e-posta, Dizi Editörü'ne Editörün kendisine bir gönderiyi düzenleme "
-"süreci boyunca yönetme görevi verdiğini bildirir. Gönderiye ve yayınevi "
-"sitesine nasıl erişileceği hakkında bilgi sağlar."
 
 msgid "emails.reviewRequest.subject"
 msgstr "Yazı Taslağı Değerlendirme Talebi"
@@ -396,12 +363,6 @@ msgid "emails.layoutRequest.subject"
 msgstr "Prova Dizgileri İste"
 
 #, fuzzy
-msgid "emails.layoutRequest.description"
-msgstr ""
-"Dizi Editörü’nden Mizanpaj Editörü’ne gönderilen bu e-posta, kendilerine bir "
-"gönderide mizanpaj düzenleme görevi verildiğini bildirir. Gönderim ve ona "
-"nasıl erişileceği hakkında bilgi sağlar."
-
 msgid "emails.layoutComplete.subject"
 msgstr "Prova Dizgileri Hazırlandı"
 
@@ -415,11 +376,6 @@ msgstr ""
 "Herhangi bir sorunuz olursa, lütfen bizimle iletişime geçin.<br />\n"
 "<br />\n"
 "{$senderName}"
-
-msgid "emails.layoutComplete.description"
-msgstr ""
-"Mizanpaj Editörü'nden Dizi Editörü'ne gönderilen bu e-posta, onlara mizanpaj "
-"sürecinin tamamlandığını bildirir."
 
 msgid "emails.indexRequest.subject"
 msgstr "İstek Dizini"
@@ -539,7 +495,7 @@ msgstr "{$month}, {$year} için editoryal etkinlik"
 msgid "emails.statisticsReportNotification.body"
 msgstr ""
 "\n"
-"{$name}, <br />\n"
+"{$recipientName}, <br />\n"
 "<br />{$month}, {$year} için yayınevi sağlık raporunuz artık hazır. Bu ay "
 "için önemli istatistikler aşağıdadır.<br />\n"
 "<ul>\n"
@@ -554,12 +510,4 @@ msgstr ""
 "bir kopyası ektedir.<br />\n"
 "<br />\n"
 "Içtenlikle<br />\n"
-"{$signature}"
-
-msgid "emails.statisticsReportNotification.description"
-msgstr ""
-"Bu e-posta, sistem sağlığına genel bir bakış sağlamak için editörlere ve "
-"yöneticilere aylık olarak gönderilir."
-
-msgid "emails.announcement.description"
-msgstr "Bu e-posta, yeni bir duyuru oluşturulduğunda gönderilir."
+"{$contextSignature}"
