--- a/locale/uk_UA/emails.po
+++ b/locale/uk_UA/emails.po
@@ -100,12 +100,6 @@ msgstr ""
 "Щиро Ваш(а),<br />\n"
 "{$signature}<br />\n"
 
-msgid "emails.editorAssign.description"
-msgstr ""
-"Цим листом редактор серії сповіщає редактора про доручення йому нагляду за "
-"процесом редакційного опрацювання подання. У листі міститься інформація про "
-"подання та про те, як отримати доступ до сайту е-видавництва."
-
 msgid "emails.editorAssign.body"
 msgstr ""
 "{$recipientName}:<br />\n"
@@ -118,11 +112,6 @@ msgstr ""
 "<br />\n"
 "Дякую,"
 
-msgid "emails.submissionAckNotUser.description"
-msgstr ""
-"При ввімкненні цей електронний лист автоматично надсилається іншим авторам, "
-"які не є користувачами OMP , зазначеними у процесі подання рукопису."
-
 msgid "emails.submissionAckNotUser.body"
 msgstr ""
 "Вітаємо,<br />\n"
@@ -133,15 +122,10 @@ msgstr ""
 "Якщо у Вас є якісь запитання, будь ласка, зв'яжіться зі мною. Дякуємо, що "
 "розглянули це е-видавництво як місце для публікації Вашого твору.<br />\n"
 "<br />\n"
-"{$signature}"
+"{$contextSignature}"
 
 msgid "emails.submissionAckNotUser.subject"
 msgstr "Подяка за подання рукопису"
-
-msgid "emails.reviewerRegister.description"
-msgstr ""
-"Цей лист надсилається новому зареєстрованому рецензенту для того, щоб "
-"повідомити йому про реєстрацію та надіслати його ім'я користувача й пароль."
 
 msgid "emails.reviewerRegister.body"
 msgstr ""
@@ -183,12 +167,6 @@ msgstr ""
 "З Повагою,<br />\n"
 "{$signature}"
 
-msgid "emails.userRegister.description"
-msgstr ""
-"Цей лист надсилається новому зареєстрованому користувачу для того, щоб "
-"привітати його з реєстрацією та надіслати йому його ім'я користувача й "
-"пароль."
-
 msgid "emails.userRegister.body"
 msgstr ""
 "Вітаємо, {$recipientName}!<br />\n"
@@ -205,12 +183,6 @@ msgstr ""
 "Дякуємо,<br />\n"
 "{$signature}"
 
-msgid "emails.passwordReset.description"
-msgstr ""
-"Цей лист надсилається зареєстрованому користувачу після того, як він успішно "
-"скинув свій пароль за допомогою процесу, викладеного у листі "
-"PASSWORD_RESET_CONFIRM."
-
 msgid "emails.passwordReset.body"
 msgstr ""
 "Ваш пароль для доступу до вебсайту {$siteTitle} був успішно змінений.<br />\n"
@@ -218,13 +190,7 @@ msgstr ""
 "Ваше ім'я користувача: {$recipientUsername}<br />\n"
 "Пароль: {$password}<br />\n"
 "<br />\n"
-"{$signature}"
-
-msgid "emails.passwordResetConfirm.description"
-msgstr ""
-"Цей лист надсилається зареєстрованому користувачу, який вказав, що забув "
-"свій пароль і не може увійти до системи. У листі міститься URL, натиснувши "
-"на який користувач може скинути свій пароль."
+"{$siteContactName}"
 
 msgid "emails.passwordResetConfirm.body"
 msgstr ""
@@ -237,7 +203,7 @@ msgstr ""
 "<br />\n"
 "Скинути мій пароль: {$passwordResetUrl}<br />\n"
 "<br />\n"
-"{$signature}"
+"{$siteContactName}"
 
 msgid "emails.notification.body"
 msgstr ""
@@ -249,7 +215,7 @@ msgstr ""
 "<br />\n"
 "Цей електроний лист згенеровано автоматично, будь ласка, не відповідайте на "
 "нього.<br />\n"
-"{$signature}<hr />{$unsubscribeLink}"
+"{$contextSignature}<hr />{$unsubscribeLink}"
 
 msgid "emails.reviewRemind.body"
 msgstr ""
@@ -386,9 +352,6 @@ msgstr "Підтвердіть свій обліковий запис"
 msgid "emails.announcement.subject"
 msgstr "{$announcementTitle}"
 
-msgid "emails.announcement.description"
-msgstr "Цей електронний лист надсилається, коли створюється нове оголошення."
-
 msgid "emails.announcement.body"
 msgstr ""
 "<b>{$announcementTitle}</b><br />\n"
@@ -398,15 +361,10 @@ msgstr ""
 "Відвідайте наш вебсайт, щоб прочитати <a href=\"{$announcementUrl}\">"
 "оголошення повністю</a>."
 
-msgid "emails.statisticsReportNotification.description"
-msgstr ""
-"Цей електронний лист автоматично надсилається щомісяця редакторам і "
-"менеджерам е-видавництва, щоб надати їм огляд справності системи."
-
 msgid "emails.statisticsReportNotification.body"
 msgstr ""
 "\n"
-"{$name}, <br />\n"
+"{$recipientName}, <br />\n"
 "<br />\n"
 "Ваш звіт про справність е-видавництва за {$month}, {$year} зараз доступний. "
 "Вашу ключову статистику за цей місяць подано нижче.<br />\n"
@@ -422,7 +380,7 @@ msgstr ""
 "копія редакційних тенденцій цього місяця додається .<br />\n"
 "<br />\n"
 "Щиро Ваш(а),<br />\n"
-"{$signature}"
+"{$contextSignature}"
 
 msgid "emails.statisticsReportNotification.subject"
 msgstr "Діяльність редакції за {$month}, {$year}"
@@ -536,11 +494,6 @@ msgstr ""
 msgid "emails.indexRequest.subject"
 msgstr "Запит щодо індексації"
 
-msgid "emails.layoutComplete.description"
-msgstr ""
-"Цей електронний лист від верстальника до редактора серії сповіщає їх про "
-"завершення процесу верстання."
-
 msgid "emails.layoutComplete.body"
 msgstr ""
 "<p>Шановний(на) {$recipientName},<p><p>Для цього подання вже підготовлено "
@@ -551,12 +504,6 @@ msgstr ""
 
 msgid "emails.layoutComplete.subject"
 msgstr "Гранки готові"
-
-msgid "emails.layoutRequest.description"
-msgstr ""
-"Цей електронний лист від редактора до верстальника сповіщає їх про те, що їм "
-"було доручено завдання виконати верстання подання. Він надає інформацію про "
-"подання та про те, як отримати доступ до нього."
 
 msgid "emails.layoutRequest.body"
 msgstr ""
