--- a/locale/da_DK/emails.po
+++ b/locale/da_DK/emails.po
@@ -31,9 +31,6 @@ msgstr ""
 "Mange tak,<br />\n"
 "{$signature}"
 
-msgid "emails.userRegister.description"
-msgstr "Denne e-mail sendes til ny-registrerede brugere for at byde dem velkommen til systemet og give dem deres brugernavn og adgangskode."
-
 msgid "emails.userValidate.subject"
 msgstr "Validér din konto"
 
@@ -67,10 +64,6 @@ msgstr ""
 "<br />\n"
 "Mange tak"
 
-msgid "emails.editorAssign.description"
-msgstr "Denne e-mail underretter en serieredaktør om, at redaktøren har tildelt vedkommende opgaven med at følge et manuskript igennem redigeringsprocessen. Den indeholder oplysninger om manuskriptet og om, hvordan der oprettes adgang til tidsskriftets websted."
-
-#, fuzzy
 msgid "emails.editorDecisionAccept.subject"
 msgstr "Redaktørbeslutning"
 
@@ -149,10 +142,6 @@ msgstr ""
 "Hvis du har nogle spørgsmål, må du endelig kontakte mig.</p><p>Med venlig "
 "hilsen</p><p>{$senderName}</p>"
 
-msgid "emails.layoutComplete.description"
-msgstr "Denne e-mail fra layoutredaktøren til serieredaktøren underretter dem om, at layoutprocessen er fuldført."
-
-#, fuzzy
 msgid "emails.layoutRequest.subject"
 msgstr "Forespørgsel om publiceringsversion"
 
@@ -172,13 +161,6 @@ msgstr ""
 "dit bidrag til dette forlags arbejde.</p><p>Med venlig hilsen</p>{$signature}"
 
 #, fuzzy
-msgid "emails.layoutRequest.description"
-msgstr ""
-"Denne e-mail fra serieredaktøren til layoutredaktøren underretter dem om, at "
-"han/hun har fået til opgave at foretage layoutredigering af et manuskript. "
-"Den indeholder oplysninger om manuskriptet og om, hvordan der oprettes "
-"adgang til det."
-
 msgid "emails.notification.subject"
 msgstr "Ny meddelelse fra {$contextName}"
 
@@ -191,7 +173,7 @@ msgstr ""
 "Link: {$notificationUrl}<br />\n"
 "<br />\n"
 "Dette er en automatisk genereret email, som ikke kan besvares.<br />\n"
-"{$signature}<hr />{$unsubscribeLink}"
+"{$contextSignature}<hr />{$unsubscribeLink}"
 
 msgid "emails.notificationCenterDefault.subject"
 msgstr "Besked omhandlende {$contextName}"
@@ -212,10 +194,7 @@ msgstr ""
 "Dit brugernavn: {$recipientUsername}<br />\n"
 "Dit nye password: {$password}<br />\n"
 "<br />\n"
-"{$signature}"
-
-msgid "emails.passwordReset.description"
-msgstr "Denne e-mail sendes til registrerede brugere, når de har nulstillet deres adgangskode, efter at de har fulgt den proces, der er beskrevet i e-mailen PASSWORD_RESET_CONFIRM."
+"{$siteContactName}"
 
 msgid "emails.passwordResetConfirm.subject"
 msgstr "Bekræftelse af nulstilling af adgangskode"
@@ -228,10 +207,7 @@ msgstr ""
 "<br />\n"
 "Nulstil min password: {$passwordResetUrl}<br />\n"
 "<br />\n"
-"{$signature}"
-
-msgid "emails.passwordResetConfirm.description"
-msgstr "Denne e-mail sendes til registrerede brugere, når de angiver, at de har glemt deres adgangskode eller ikke kan logge på. Den indeholder en URL-adresse, de kan følge for at nulstille deres adgangskode."
+"{$siteContactName}"
 
 msgid "emails.reviewerRegister.subject"
 msgstr "Registrering som bedømmer hos {$contextName}"
@@ -247,9 +223,6 @@ msgstr ""
 "<br />\n"
 "Mange tak. <br />\n"
 "{$signature}"
-
-msgid "emails.reviewerRegister.description"
-msgstr "Denne e-mail sendes til netop registrerede bedømmere for at byde dem velkommen til systemet og for at oplyse dem om deres brugernavn og adgangskode."
 
 msgid "emails.reviewCancel.subject"
 msgstr "Annullering af forespørgsel om bedømmelse"
@@ -407,10 +380,7 @@ msgstr ""
 "<br />\n"
 "Hvis du har spørgsmål, er du velkommen til at kontakte mig. Tak fordi du har valgt at publicere din artikel i dette tidsskrift.<br />\n"
 "<br />\n"
-"{$signature}"
-
-msgid "emails.submissionAckNotUser.description"
-msgstr "Når denne e-mail er aktiveret, sendes automatisk besked til de andre forfattere, der ikke er brugere inden for OMP, der er angivet under indsendelsesprocessen."
+"{$contextSignature}"
 
 msgid "emails.notifyFile.description"
 msgstr "En meddelelse fra en bruger sendt fra et filinformationscenter modal"
@@ -457,15 +427,10 @@ msgstr ""
 msgid "emails.reviewReinstate.subject"
 msgstr "Anmodning om bedømmelse genindsat"
 
-msgid "emails.statisticsReportNotification.description"
-msgstr ""
-"Denne e-mail sendes automatisk en gang om måneden til redaktører og "
-"forlagschefer for at give dem et overblik over systemets tilstand."
-
 msgid "emails.statisticsReportNotification.body"
 msgstr ""
 "\n"
-"{$name}, <br />\n"
+"{$recipientName}, <br />\n"
 "<br />\n"
 "Dit forlags tilstandsrapport for {$month}, {$year} er nu tilgængelig. De "
 "statistiske nøgletal ses nedenfor.<br />\n"
@@ -481,13 +446,10 @@ msgstr ""
 "kopi af denne måneds redaktionelle udvikling er vedhæftet.<br />\n"
 "<br />\n"
 "Med venlig hilsen<br />\n"
-"{$signature}"
+"{$contextSignature}"
 
 msgid "emails.statisticsReportNotification.subject"
 msgstr "Redaktionel aktivitet for {$month}, {$year}"
-
-msgid "emails.announcement.description"
-msgstr "Denne e-mail sendes, når der oprettes en ny meddelelse."
 
 msgid "emails.announcement.body"
 msgstr ""
