--- a/locale/fr_CA/emails.po
+++ b/locale/fr_CA/emails.po
@@ -23,7 +23,7 @@ msgstr ""
 "<br />\n"
 "Lien: {$notificationUrl}<br />\n"
 "<br />\n"
-"{$signature}"
+"{$contextSignature}"
 
 msgid "emails.passwordResetConfirm.subject"
 msgstr "Confirmation de réinitialisation du mot de passe"
@@ -36,10 +36,7 @@ msgstr ""
 "<br />\n"
 "Modifier mon mot de passe: {$passwordResetUrl}<br />\n"
 "<br />\n"
-"{$signature}"
-
-msgid "emails.passwordResetConfirm.description"
-msgstr "Ce courriel est envoyé à un utilisateur lorsqu'il a indiqué avoir oublié son mot de passe ou être incapable d'ouvrir une session. On lui fournit une adresse URL sur laquelle il peut cliquer pour modifier son mot de passe."
+"{$siteContactName}"
 
 msgid "emails.passwordReset.subject"
 msgstr "Réinitialisation du mot de passe"
@@ -51,10 +48,7 @@ msgstr ""
 "Votre nom d'utilisateur: {$recipientUsername}<br />\n"
 "Votre nouveau mot de passe: {$password}<br />\n"
 "<br />\n"
-"{$signature}"
-
-msgid "emails.passwordReset.description"
-msgstr "Ce courriel est envoyé à un utilisateur lorsque son mot de passe a été réinitialisé après avoir suivi les instructions du courriel \"PASSWORD_RESET_CONFIRM\"."
+"{$siteContactName}"
 
 msgid "emails.userRegister.subject"
 msgstr "Inscription à la presse"
@@ -71,9 +65,6 @@ msgstr ""
 "<br />\n"
 "Merci,<br />\n"
 "{$signature}"
-
-msgid "emails.userRegister.description"
-msgstr "Ce courriel est envoyé à un nouvel utilisateur afin de lui souhaiter la bienvenue dans le système et lui fournir son nom d'utilisateur et son mot de passe pour ses dossiers."
 
 msgid "emails.userValidate.subject"
 msgstr "Valider votre compte"
@@ -109,9 +100,6 @@ msgstr ""
 "Merci,<br />\n"
 "{$signature}"
 
-msgid "emails.reviewerRegister.description"
-msgstr "Ce courriel est envoyé à un nouvel évaluateur pour lui souhaiter la bienvenue dans le système et lui fournir une confirmation écrite de son nom d'utilisateur et de son mot de passe."
-
 msgid "emails.submissionAckNotUser.subject"
 msgstr "Accusé de réception d'une soumission"
 
@@ -123,10 +111,7 @@ msgstr ""
 "<br />\n"
 "Si vous avez des questions, n'hésitez pas à me contacter. Merci d'avoir envoyé votre article à cette presse.<br />\n"
 "<br />\n"
-"{$signature}"
-
-msgid "emails.submissionAckNotUser.description"
-msgstr "Lorsqu'il est activé, ce courriel est envoyé automatiquement aux autres auteurs qui ne font pas partie des utilisateurs d'OMP identifiés pendant le processus de soumission."
+"{$contextSignature}"
 
 msgid "emails.editorAssign.subject"
 msgstr "Travail éditorial"
@@ -141,9 +126,6 @@ msgstr ""
 "Nom d'utilisateur: {$recipientUsername}<br />\n"
 "<br />\n"
 "Merci,"
-
-msgid "emails.editorAssign.description"
-msgstr "Ce courriel indique au rédacteur en chef d'une série qu'on lui a assigné la tâche de superviser une soumission tout au long de son processus éditorial. Il contient des renseignements sur la soumission et indique comment accéder au site de la presse."
 
 msgid "emails.reviewRequest.subject"
 msgstr "Requête d'évaluation d'un manuscrit"
@@ -275,9 +257,6 @@ msgstr ""
 "Si vous ne pouvez pas faire ce travail en ce moment ou si vous avez des questions, n'hésitez pas à me contacter. Merci d'avoir contribué à cette presse."
 
 #, fuzzy
-msgid "emails.layoutRequest.description"
-msgstr "Ce courriel est envoyé au rédacteur metteur en page par le rédacteur en chef de la série pour lui indiquer qu'on lui a demandé de faire la mise en page de la soumission. Il contient des renseignements sur la soumission et explique comment y accéder."
-
 msgid "emails.layoutComplete.subject"
 msgstr "Épreuves en placard complétées"
 
@@ -290,9 +269,6 @@ msgstr ""
 "Si vous avez questions, n'hésitez pas à me contacter.<br />\n"
 "<br />\n"
 "{$senderName}"
-
-msgid "emails.layoutComplete.description"
-msgstr "Ce courriel est envoyé par le rédacteur metteur en page au rédacteur d'une série pour l'informer que la mise en page du manuscrit est terminée."
 
 msgid "emails.indexRequest.subject"
 msgstr "Requête d'indexage"
