--- a/locale/sl_SI/emails.po
+++ b/locale/sl_SI/emails.po
@@ -16,34 +16,25 @@ msgstr "Novo obvestilo od {$contextName}"
 
 #, fuzzy
 msgid "emails.notification.body"
-msgstr "Imate novo obvestilo od {$contextName}: <br /> <br /> {$notificationContents}<br /> <br /> Povezava: <a href=\"{$notificationUrl}\">{$notificationUrl}</a><br /> <br /> Ne odgovarjajte na to sporočilo, ker gre za samodejno ustvarjeno sporočilo. <br /> {$signature}"
+msgstr "Imate novo obvestilo od {$contextName}: <br /> <br /> {$notificationContents}<br /> <br /> Povezava: <a href=\"{$notificationUrl}\">{$notificationUrl}</a><br /> <br /> Ne odgovarjajte na to sporočilo, ker gre za samodejno ustvarjeno sporočilo. <br /> {$contextSignature}"
 
 msgid "emails.passwordResetConfirm.subject"
 msgstr "Potrditev ponastavitve gesla"
 
 msgid "emails.passwordResetConfirm.body"
-msgstr "Prejeli smo zahtevo za ponastavitev gesla za spletno mesto {$siteTitle}. <br /> <br /> Če te zahteve niste podali vi, prezrite to e-poštno sporočilo in vaše geslo ne bo spremenjeno. Če želite ponastaviti geslo, kliknite spodnjo povezavo.<br /> <br /> Ponastavi geslo: <a href=\"{$passwordResetUrl}\">{$passwordResetUrl}</a><br /> <br /> {$signature}"
-
-msgid "emails.passwordResetConfirm.description"
-msgstr "To e-poštno sporočilo je poslano registriranemu uporabniku, če označijo, da so pozabili svoje geslo ali se ne morejo prijaviti. Sporočilo vsebuje URL, do katerega lahko dostopajo, če želijo ponastaviti geslo."
+msgstr "Prejeli smo zahtevo za ponastavitev gesla za spletno mesto {$siteTitle}. <br /> <br /> Če te zahteve niste podali vi, prezrite to e-poštno sporočilo in vaše geslo ne bo spremenjeno. Če želite ponastaviti geslo, kliknite spodnjo povezavo.<br /> <br /> Ponastavi geslo: <a href=\"{$passwordResetUrl}\">{$passwordResetUrl}</a><br /> <br /> {$siteContactName}"
 
 msgid "emails.passwordReset.subject"
 msgstr "Ponastavitev gesla"
 
 msgid "emails.passwordReset.body"
-msgstr "Vaše geslo za dostop do spletišča {$siteTitle} je bilo ponastavljeno.<br /> <br /> Uporabniško ime: {$recipientUsername}<br /> Vaše novo geslo: {$password}<br /> <br /> {$signature}"
-
-msgid "emails.passwordReset.description"
-msgstr "To e-poštno sporočilo je poslano registriranemu uporabniku, ko je uspešno ponastavil svoje geslo po postopku, opisanem v e-poštnem sporočilu PASSWORD_RESET_CONFIRM."
+msgstr "Vaše geslo za dostop do spletišča {$siteTitle} je bilo ponastavljeno.<br /> <br /> Uporabniško ime: {$recipientUsername}<br /> Vaše novo geslo: {$password}<br /> <br /> {$siteContactName}"
 
 msgid "emails.userRegister.subject"
 msgstr "Registracija založbe"
 
 msgid "emails.userRegister.body"
 msgstr "{$recipientName} <br /> <br /> Zdaj ste registrirani kot uporabnik {$contextName}. Spodaj sta napisana vaše uporabniško ime in geslo, ki ju potrebujete za dostop do založbe preko spleta. Kadar koli bi se želeli odstraniti s seznama uporabnikov, se lahko obrnete name.<br /> <br /> Uporabniško ime: {$recipientUsername}<br /> Geslo: {$password}<br /> <br /> Hvala, <br /> {$signature}"
-
-msgid "emails.userRegister.description"
-msgstr "To e-poštno sporočilo je poslano novim uporabnikom ob registraciji, da jih pozdravimo v sistemu in jim posredujemo informacijo o uporabniškem imenu in geslu."
 
 msgid "emails.userValidate.subject"
 msgstr "Potrditev vašega računa"
@@ -60,17 +51,11 @@ msgstr "Registracija za recenzenta pri {$contextName}"
 msgid "emails.reviewerRegister.body"
 msgstr "Glede na vaše področje delovanja, smo si dovolili registrirati vaše ime v bazo recenzentov za publikacijo {$contextName}. To ne pomeni nobene obveze z vaše strani in nam le omogoča, da vas lahko povabimo k recenziji prispevkov. Ko boste povabljeni k recenziji, boste lahko videli naslov in povzetek prispevka in se boste lahko odločili, ali boste pri recenziji sodelovali ali ne. Kadar koli lahko zahtevate, da vas odstranimo iz seznama recenzentov.<br /> <br /> Pošiljamo vam uporabniško ime in geslo, ki ju potrebujete za vso interakcijo z založbo preko spleta. Če želite lahko posodobite vaš račun, vključno z recenzentskimi interesi.<br /> <br />Uporabniško ime: {$recipientUsername}<br /> Geslo: {$password}<br /> <br />Hvala,<br /> {$signature}"
 
-msgid "emails.reviewerRegister.description"
-msgstr "To e-poštno sporočilo je poslano recenzentom ob registraciji, da se jih pozdravi v sistemu in jim posreduje informacijo o uporabniškem imenu in geslu."
-
 msgid "emails.submissionAckNotUser.subject"
 msgstr "Potrditev oddaje prispevka"
 
 msgid "emails.submissionAckNotUser.body"
-msgstr "Pozdravljeni, <br /> <br /> {$submitterName} je predložil_a rokopis &quot;{$submissionTitle}&quot; za {$contextName}. Če imate kakršno koli vprašanje, se, prosim, obrnite name. {$signature} Hvala, da ste se odločili za našo založbo.<br /> <br /> {$signature}"
-
-msgid "emails.submissionAckNotUser.description"
-msgstr "Če je omogočeno, se to e-poštno sporočilo samodejno pošlje drugim avtorjem, ki niso uporabniki znotraj OMP in ki so bili navedeni med postopkom oddaje prispevka."
+msgstr "Pozdravljeni, <br /> <br /> {$submitterName} je predložil_a rokopis &quot;{$submissionTitle}&quot; za {$contextName}. Če imate kakršno koli vprašanje, se, prosim, obrnite name. {$signature} Hvala, da ste se odločili za našo založbo.<br /> <br /> {$contextSignature}"
 
 msgid "emails.submissionUnsuitable.subject"
 msgstr "Neprimeren prispevek"
@@ -86,9 +71,6 @@ msgstr "Uredniške zadolžitve"
 
 msgid "emails.editorAssign.body"
 msgstr "{$recipientName}: <br /> <br /> Prispevek &quot;{$submissionTitle},&quot;, oddan na {$contextName} vam je bil kot uredniku dodeljen v proces urejanja. <br /> <br /> URL do prispevka: <a href=\"{$submissionUrl}\">{$submissionUrl}</a><br /> Uporabniško ime: {$recipientUsername}<br /> <br /> Hvala,"
-
-msgid "emails.editorAssign.description"
-msgstr "To e-poštno sporočilo obvesti urednika zbirke o tem, da jih je urednik določil za nadzor prispevka v postopku urejanja. Vsebuje informacije o oddaji prispevka in o tem, kako je možno dostopati do strani založbe."
 
 msgid "emails.reviewRequest.subject"
 msgstr "Prošnja za recenzijo rokopisa"
@@ -153,17 +135,11 @@ msgid "emails.layoutRequest.body"
 msgstr "{$recipientName}:<br /> <br /> Prispevek &quot;{$submissionTitle}&quot; za {$contextName} potrebuje prelom, ki se naredi po naslednjih korakih.<br /> 1. Kliknite na URL povezavo do prispevka spodaj.<br /> 2. Prijavite se v založbo in uporabite datoteko za pripravo preloma, da pripravite prelom skladno s standardi založbe.<br /> 3. Uredniku pošljite e-poštno sporočilo Zaključeno.<br /> <br /> {$contextName} URL: <a href=\"{$contextUrl}\">{$contextUrl}</a><br /> Povezava URL do prispevka: <a href=\"{$submissionUrl}\">{$submissionUrl}</a><br /> Uporabniško ime: {$recipientUsername}<br /> <br /> Če v tem trenutku dela ne morete opraviti ali imate kakšno vprašanje, se prosim obrnite name. Hvala za vaš prispevek založbi."
 
 #, fuzzy
-msgid "emails.layoutRequest.description"
-msgstr "To e-poštno sporočilo od urednika zbirke obvešča grafičnega urednika, da mu je bil dodeljen prispevek za grafično urejanje. Vsebuje informacije o prispevku in o tem, kako je možno dostopati do prispevka. "
-
 msgid "emails.layoutComplete.subject"
 msgstr "Prelom končan"
 
 msgid "emails.layoutComplete.body"
 msgstr "{$recipientName}:<br /> <br />Prelomi za rokopis, &quot;{$submissionTitle},&quot, za {$contextName} so pripravljeni in so na voljo za korekturo. <br /> <br />Če imate kakršno koli vprašanje, se prosim obrnite name.<br /> <br /> {$senderName}"
-
-msgid "emails.layoutComplete.description"
-msgstr "To e-poštno sporočilo od grafičnega urednika obvešča urednika zbirke, da je zaključil proces grafičnega oblikovanja. "
 
 msgid "emails.indexRequest.subject"
 msgstr "Zahteva za kazalo"
